feat: implement localized number input system v0.4.0
- Add native numeral system support for Arabic () and Farsi ()
- Create LocalizedNumberInput component for seamless number input/display
- Update AddTransactionModal and CustomCurrencyModal to use localized inputs
- Enhance CurrencyService with localized number formatting
- Complete translation improvements for all 13 languages (124+ keys each)
- Add custom currency editing functionality
- Update version to 0.4.0 across all configuration files
- Add comprehensive documentation for number localization system

Breaking changes: None - fully backward compatible
New features: Localized number input, improved translations, custom currency editing
Bug fixes: Missing translation keys, inconsistent numeral display

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -1,123 +1,126 @@
 {
-  "dashboard": "Dashboard",
-  "accounts": "Accounts",
-  "transactions": "Transactions",
-  "settings": "Settings",
-  "welcome": "Welcome to LedgerWell",
-  "totalOwed": "Total I Owe",
-  "totalOwedToMe": "Total Owed to Me",
-  "netBalance": "Net Balance",
-  "addAccount": "Add Account",
-  "addTransaction": "Add Transaction",
-  "accountName": "Account Name",
-  "description": "Description",
-  "currency": "Currency",
-  "amount": "Amount",
-  "type": "Type",
-  "debt": "I Owe Money",
-  "credit": "Someone Owes Me",
-  "save": "Save",
-  "cancel": "Cancel",
-  "edit": "Edit",
-  "delete": "Delete",
-  "confirm": "Confirm",
-  "confirmDelete": "Are you sure you want to delete this item?",
-  "language": "Language",
-  "theme": "Theme",
-  "defaultCurrency": "Default Currency",
-  "autoUpdateRates": "Auto Update Exchange Rates",
-  "darkMode": "Dark Mode",
-  "customCurrency": "Custom Currency",
-  "currencyCode": "Currency Code",
-  "currencyName": "Currency Name",
-  "currencySymbol": "Currency Symbol",
-  "exchangeRate": "Exchange Rate (to USD)",
-  "manualRate": "Set Manual Rate",
-  "updateRates": "Update Exchange Rates",
-  "lastUpdated": "Last Updated",
-  "noAccounts": "No accounts found. Add your first account!",
-  "noTransactions": "No transactions found.",
-  "searchPlaceholder": "Search...",
-  "filterBy": "Filter By",
-  "sortBy": "Sort By",
-  "date": "Date",
+  "dashboard": "Übersicht",
+  "accounts": "Konten",
+  "transactions": "Transaktionen",
+  "settings": "Einstellungen",
+  "welcome": "Willkommen bei LedgerWell",
+  "totalOwed": "Gesamtschulden",
+  "totalOwedToMe": "Gesamtbetrag, der mir geschuldet wird",
+  "netBalance": "Nettosaldo",
+  "addAccount": "Konto hinzufügen",
+  "addTransaction": "Transaktion hinzufügen",
+  "accountName": "Kontoname",
+  "description": "Beschreibung",
+  "currency": "Währung",
+  "amount": "Betrag",
+  "type": "Typ",
+  "debt": "Ich schulde Geld",
+  "credit": "Jemand schuldet mir Geld",
+  "save": "Speichern",
+  "cancel": "Abbrechen",
+  "edit": "Bearbeiten",
+  "delete": "Löschen",
+  "confirm": "Bestätigen",
+  "confirmDelete": "Sind Sie sicher, dass Sie dieses Element löschen möchten?",
+  "language": "Sprache",
+  "theme": "Thema",
+  "defaultCurrency": "Standardwährung",
+  "autoUpdateRates": "Wechselkurse automatisch aktualisieren",
+  "darkMode": "Dunkler Modus",
+  "customCurrency": "Benutzerdefinierte Währung",
+  "currencyCode": "Währungscode",
+  "currencyName": "Währungsname",
+  "currencySymbol": "Währungssymbol",
+  "exchangeRate": "Wechselkurs (zum USD)",
+  "manualRate": "Manuellen Kurs festlegen",
+  "updateRates": "Wechselkurse aktualisieren",
+  "lastUpdated": "Zuletzt aktualisiert",
+  "noAccounts": "Keine Konten gefunden. Fügen Sie Ihr erstes Konto hinzu!",
+  "noTransactions": "Keine Transaktionen gefunden.",
+  "searchPlaceholder": "Suchen...",
+  "filterBy": "Filtern nach",
+  "sortBy": "Sortieren nach",
+  "date": "Datum",
   "name": "Name",
-  "balance": "Balance",
-  "recent": "Recent",
-  "oldest": "Oldest",
-  "recentAccounts": "Recent Accounts",
-  "noDescription": "No description",
-  "net": "Net",
-  "exchangeRates": "Exchange Rates",
-  "dataManagement": "Data Management",
-  "resetAllData": "Reset All Data",
-  "updating": "Updating...",
-  "fetchingRates": "Fetching latest exchange rates",
-  "ratesUpdated": "Exchange rates updated successfully",
-  "updateFailed": "Failed to update exchange rates",
-  "resetConfirm": "This will permanently delete all accounts, transactions, and settings. This action cannot be undone.",
-  "allDataReset": "All data has been reset",
-  "resetFailed": "Failed to reset data",
-  "success": "Success",
-  "enterAccountName": "Enter account name",
-  "optionalDescription": "Optional description",
-  "createCustomCurrency": "Create a custom currency by providing the currency code, name, symbol, and exchange rate to USD.",
-  "currencyCodeHelper": "3 letter currency code",
-  "bitcoinExample": "e.g., Bitcoin, Ethereum",
-  "symbolExample": "e.g., ₿, Ξ, ₹",
-  "rateExample": "e.g., 45000.00",
-  "rateHelper": "How much 1 USD equals in your currency",
-  "exampleTitle": "Example:",
-  "exampleText": "Code: BTC\nName: Bitcoin\nSymbol: ₿\nRate: 0.000025 (if 1 USD = 0.000025 BTC)",
-  "languageChanged": "Language Changed",
-  "restartRequired": "Please restart the app to apply the layout changes for the new language.",
-  "error": "Error",
-  "pleaseEnterAccountName": "Please enter an account name",
-  "pleaseSelectCurrency": "Please select a currency",
-  "accountUpdated": "Account updated successfully",
-  "accountCreated": "Account created successfully",
-  "accountActionFailed": "Failed to {action} account",
-  "update": "update",
-  "create": "create",
-  "pleaseSelectAccount": "Please select an account",
-  "pleaseEnterDescription": "Please enter a description",
-  "pleaseEnterPersonName": "Please enter a person or company name",
-  "pleaseEnterValidAmount": "Please enter a valid amount",
-  "transactionUpdated": "Transaction updated successfully",
-  "transactionAdded": "Transaction added successfully",
-  "transactionActionFailed": "Failed to {action} transaction",
+  "balance": "Saldo",
+  "recent": "Neueste",
+  "oldest": "Älteste",
+  "recentAccounts": "Neueste Konten",
+  "noDescription": "Keine Beschreibung",
+  "net": "Netto",
+  "exchangeRates": "Wechselkurse",
+  "dataManagement": "Datenverwaltung",
+  "resetAllData": "Alle Daten zurücksetzen",
+  "updating": "Aktualisiere...",
+  "fetchingRates": "Lade aktuelle Wechselkurse",
+  "ratesUpdated": "Wechselkurse erfolgreich aktualisiert",
+  "updateFailed": "Fehler beim Aktualisieren der Wechselkurse",
+  "resetConfirm": "Dadurch werden alle Konten, Transaktionen und Einstellungen dauerhaft gelöscht. Diese Aktion kann nicht rückgängig gemacht werden.",
+  "allDataReset": "Alle Daten wurden zurückgesetzt",
+  "resetFailed": "Fehler beim Zurücksetzen der Daten",
+  "success": "Erfolg",
+  "enterAccountName": "Kontoname eingeben",
+  "optionalDescription": "Optionale Beschreibung",
+  "createCustomCurrency": "Erstellen Sie eine benutzerdefinierte Währung, indem Sie den Währungscode, Namen, das Symbol und den Wechselkurs zum USD angeben.",
+  "currencyCodeHelper": "3-stelliger Währungscode",
+  "bitcoinExample": "z.B. Bitcoin, Ethereum",
+  "symbolExample": "z.B. ₿, Ξ, ₹",
+  "rateExample": "z.B. 45000.00",
+  "rateHelper": "Wie viel 1 USD in Ihrer Währung entspricht",
+  "exampleTitle": "Beispiel:",
+  "exampleText": "Code: BTC\nName: Bitcoin\nSymbol: ₿\nKurs: 0.000025 (wenn 1 USD = 0.000025 BTC)",
+  "languageChanged": "Sprache geändert",
+  "restartRequired": "Bitte starten Sie die App neu, um die Layoutänderungen für die neue Sprache zu übernehmen.",
+  "error": "Fehler",
+  "pleaseEnterAccountName": "Bitte geben Sie einen Kontonamen ein",
+  "pleaseSelectCurrency": "Bitte wählen Sie eine Währung aus",
+  "accountUpdated": "Konto erfolgreich aktualisiert",
+  "accountCreated": "Konto erfolgreich erstellt",
+  "accountActionFailed": "{action} des Kontos fehlgeschlagen",
+  "update": "aktualisieren",
+  "create": "erstellen",
+  "pleaseSelectAccount": "Bitte wählen Sie ein Konto aus",
+  "pleaseEnterDescription": "Bitte geben Sie eine Beschreibung ein",
+  "pleaseEnterPersonName": "Bitte geben Sie einen Personen- oder Firmennamen ein",
+  "pleaseEnterValidAmount": "Bitte geben Sie einen gültigen Betrag ein",
+  "transactionUpdated": "Transaktion erfolgreich aktualisiert",
+  "transactionAdded": "Transaktion erfolgreich hinzugefügt",
+  "transactionActionFailed": "{action} der Transaktion fehlgeschlagen",
   "amountPlaceholder": "0.00",
-  "transactionDescriptionPlaceholder": "What is this transaction for?",
-  "fillAllFields": "Please fill in all fields",
-  "currencyCodeInvalid": "Currency code must be exactly 3 letters (e.g., USD, EUR)",
-  "validExchangeRate": "Please enter a valid exchange rate",
-  "about": "About",
-  "appDescription": "Personal debt and credit tracking app",
+  "transactionDescriptionPlaceholder": "Wofür ist diese Transaktion?",
+  "fillAllFields": "Bitte füllen Sie alle Felder aus",
+  "currencyCodeInvalid": "Der Währungscode muss genau 3 Buchstaben haben (z.B. USD, EUR)",
+  "validExchangeRate": "Bitte geben Sie einen gültigen Wechselkurs ein",
+  "about": "Über",
+  "appDescription": "App zur persönlichen Schulden- und Kreditverfolgung",
   "version": "Version",
-  "developer": "Developer",
-  "sourceCode": "Source Code",
+  "developer": "Entwickler",
+  "sourceCode": "Quellcode",
   "privacy": "Datenschutz",
   "privacyDescription": "Ihre Daten bleiben auf Ihrem Gerät",
   "footerDescription": "LedgerWell hilft Ihnen, Schulden und Kredite mit Mehrwährungsunterstützung und vollständiger Privatsphäre zu verfolgen.",
   "copyrightText": "© 2025 Sepehr Mohammady. Open Source unter MIT-Lizenz.",
-  "currencyExists": "Currency {code} already exists",
-  "customCurrencyAdded": "Custom currency {code} added successfully",
-  "customCurrencyFailed": "Failed to add custom currency",
+  "currencyExists": "Währung {code} existiert bereits",
+    "customCurrencyAdded": "Benutzerdefinierte Währung {code} erfolgreich hinzugefügt",
+  "customCurrencyUpdated": "Benutzerdefinierte Währung {code} erfolgreich aktualisiert",
+  "customCurrencyFailed": "Benutzerdefinierte Währung konnte nicht hinzugefügt werden",
+  "editCustomCurrency": "Benutzerdefinierte Währung Bearbeiten",
+  "editCustomCurrencyInfo": "Aktualisieren Sie die Details Ihrer benutzerdefinierten Währung. Der Wechselkurs sollte relativ zum USD sein.",
   "currencyCodePlaceholder": "e.g., BTC, ETH",
   "currencyNamePlaceholder": "e.g., Bitcoin, Ethereum",
-  "personName": "Person/Company Name",
-  "personNamePlaceholder": "Who owes or is owed money?",
-  "transactionDescription": "Additional Notes",
-  "transactionDescriptionOptional": "Optional additional details",
-  "manageCustomCurrencies": "Manage Custom Currencies",
-  "createCustomCurrencyButton": "Create Custom Currency",
-  "customCurrencyDeleted": "Custom currency deleted successfully",
-  "account": "Account",
-  "confirmReset": "Are you sure you want to reset all data?",
-  "customCurrencyExample": "For example: Bitcoin (BTC)",
-  "noAccountsFound": "No accounts found",
-  "noTransactionsFound": "No transactions found",
-  "reset": "Reset",
-  "settingsSaveFailed": "Failed to save settings",
-  "totalBalance": "Total Balance"
+  "personName": "Person/Firmenname",
+  "personNamePlaceholder": "Wer schuldet oder wem wird Geld geschuldet?",
+  "transactionDescription": "Zusätzliche Hinweise",
+  "transactionDescriptionOptional": "Optionale zusätzliche Details",
+  "manageCustomCurrencies": "Benutzerdefinierte Währungen verwalten",
+  "createCustomCurrencyButton": "Benutzerdefinierte Währung Erstellen",
+  "customCurrencyDeleted": "Benutzerdefinierte Währung erfolgreich gelöscht",
+  "account": "Konto",
+  "confirmReset": "Sind Sie sicher, dass Sie alle Daten zurücksetzen möchten?",
+  "customCurrencyExample": "Zum Beispiel: Bitcoin (BTC)",
+  "noAccountsFound": "Keine Konten gefunden",
+  "noTransactionsFound": "Keine Transaktionen gefunden",
+  "reset": "Zurücksetzen",
+  "settingsSaveFailed": "Fehler beim Speichern der Einstellungen",
+  "totalBalance": "Gesamtsaldo"
 }
