--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -102,7 +102,10 @@
   "copyrightText": "© 2025 Sepehr Mohammady. Open source under MIT License.",
   "currencyExists": "Currency {code} already exists",
   "customCurrencyAdded": "Custom currency {code} added successfully",
+  "customCurrencyUpdated": "Custom currency {code} updated successfully",
   "customCurrencyFailed": "Failed to add custom currency",
+  "editCustomCurrency": "Edit Custom Currency",
+  "editCustomCurrencyInfo": "Update the details of your custom currency. The exchange rate should be relative to USD.",
   "currencyCodePlaceholder": "e.g., BTC, ETH",
   "currencyNamePlaceholder": "e.g., Bitcoin, Ethereum",
   "personName": "Person/Company Name",
