--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -103,9 +103,21 @@
   "validExchangeRate": "Veuillez saisir un taux de change valide (nombre positif)",
   "currencyExists": "La devise {code} existe déjà",
   "customCurrencyAdded": "Devise personnalisée {code} ajoutée avec succès",
+  "customCurrencyUpdated": "Devise personnalisée {code} mise à jour avec succès",
   "customCurrencyFailed": "Échec de l'ajout de la devise personnalisée",
+  "editCustomCurrency": "Modifier la Devise Personnalisée",
+  "editCustomCurrencyInfo": "Mettez à jour les détails de votre devise personnalisée. Le taux de change doit être relatif à l'USD.",
   "currencyCodePlaceholder": "par ex., BTC, ETH",
   "currencyNamePlaceholder": "par ex., Bitcoin, Ethereum",
+  "about": "À propos",
+  "appDescription": "Application de suivi des dettes et crédits personnels",
+  "version": "Version",
+  "developer": "Développeur",
+  "sourceCode": "Code Source",
+  "privacy": "Confidentialité",
+  "privacyDescription": "Vos données restent sur votre appareil",
+  "footerDescription": "LedgerWell vous aide à suivre les dettes et crédits avec support multi-devises et confidentialité complète.",
+  "copyrightText": "© 2025 Sepehr Mohammady. Open source sous licence MIT.",
   "account": "Compte",
   "confirmReset": "Êtes-vous sûr de vouloir réinitialiser toutes les données?",
   "noAccountsFound": "Aucun compte trouvé",
