--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -1,123 +1,126 @@
 {
-  "dashboard": "Dashboard",
-  "accounts": "Accounts",
-  "transactions": "Transactions",
-  "settings": "Settings",
-  "welcome": "Welcome to LedgerWell",
-  "totalOwed": "Total I Owe",
-  "totalOwedToMe": "Total Owed to Me",
-  "netBalance": "Net Balance",
-  "addAccount": "Add Account",
-  "addTransaction": "Add Transaction",
-  "accountName": "Account Name",
-  "description": "Description",
-  "currency": "Currency",
-  "amount": "Amount",
-  "type": "Type",
-  "debt": "I Owe Money",
-  "credit": "Someone Owes Me",
-  "save": "Save",
-  "cancel": "Cancel",
+  "dashboard": "Dasbor",
+  "accounts": "Akun",
+  "transactions": "Transaksi",
+  "settings": "Pengaturan",
+  "welcome": "Selamat datang di LedgerWell",
+  "totalOwed": "Total yang saya hutang",
+  "totalOwedToMe": "Total yang orang lain hutang kepada saya",
+  "netBalance": "Saldo bersih",
+  "addAccount": "Tambah Akun",
+  "addTransaction": "Tambah Transaksi",
+  "accountName": "Nama Akun",
+  "description": "Deskripsi",
+  "currency": "Mata uang",
+  "amount": "Jumlah",
+  "type": "Tipe",
+  "debt": "Saya berhutang uang",
+  "credit": "Seseorang berhutang kepada saya",
+  "save": "Simpan",
+  "cancel": "Batal",
   "edit": "Edit",
-  "delete": "Delete",
-  "confirm": "Confirm",
-  "confirmDelete": "Are you sure you want to delete this item?",
-  "language": "Language",
-  "theme": "Theme",
-  "defaultCurrency": "Default Currency",
-  "autoUpdateRates": "Auto Update Exchange Rates",
-  "darkMode": "Dark Mode",
-  "customCurrency": "Custom Currency",
-  "currencyCode": "Currency Code",
-  "currencyName": "Currency Name",
-  "currencySymbol": "Currency Symbol",
-  "exchangeRate": "Exchange Rate (to USD)",
-  "manualRate": "Set Manual Rate",
-  "updateRates": "Update Exchange Rates",
-  "lastUpdated": "Last Updated",
-  "noAccounts": "No accounts found. Add your first account!",
-  "noTransactions": "No transactions found.",
-  "searchPlaceholder": "Search...",
-  "filterBy": "Filter By",
-  "sortBy": "Sort By",
-  "date": "Date",
-  "name": "Name",
-  "balance": "Balance",
-  "recent": "Recent",
-  "oldest": "Oldest",
-  "recentAccounts": "Recent Accounts",
-  "noDescription": "No description",
-  "net": "Net",
-  "exchangeRates": "Exchange Rates",
-  "dataManagement": "Data Management",
-  "resetAllData": "Reset All Data",
-  "updating": "Updating...",
-  "fetchingRates": "Fetching latest exchange rates",
-  "ratesUpdated": "Exchange rates updated successfully",
-  "updateFailed": "Failed to update exchange rates",
-  "resetConfirm": "This will permanently delete all accounts, transactions, and settings. This action cannot be undone.",
-  "allDataReset": "All data has been reset",
-  "resetFailed": "Failed to reset data",
-  "success": "Success",
-  "enterAccountName": "Enter account name",
-  "optionalDescription": "Optional description",
-  "createCustomCurrency": "Create a custom currency by providing the currency code, name, symbol, and exchange rate to USD.",
-  "currencyCodeHelper": "3 letter currency code",
-  "bitcoinExample": "e.g., Bitcoin, Ethereum",
-  "symbolExample": "e.g., ₿, Ξ, ₹",
-  "rateExample": "e.g., 45000.00",
-  "rateHelper": "How much 1 USD equals in your currency",
-  "exampleTitle": "Example:",
-  "exampleText": "Code: BTC\nName: Bitcoin\nSymbol: ₿\nRate: 0.000025 (if 1 USD = 0.000025 BTC)",
-  "languageChanged": "Language Changed",
-  "restartRequired": "Please restart the app to apply the layout changes for the new language.",
-  "error": "Error",
-  "pleaseEnterAccountName": "Please enter an account name",
-  "pleaseSelectCurrency": "Please select a currency",
-  "accountUpdated": "Account updated successfully",
-  "accountCreated": "Account created successfully",
-  "accountActionFailed": "Failed to {action} account",
-  "update": "update",
-  "create": "create",
-  "pleaseSelectAccount": "Please select an account",
-  "pleaseEnterDescription": "Please enter a description",
-  "pleaseEnterPersonName": "Please enter a person or company name",
-  "pleaseEnterValidAmount": "Please enter a valid amount",
-  "transactionUpdated": "Transaction updated successfully",
-  "transactionAdded": "Transaction added successfully",
-  "transactionActionFailed": "Failed to {action} transaction",
+  "delete": "Hapus",
+  "confirm": "Konfirmasi",
+  "confirmDelete": "Apakah Anda yakin ingin menghapus item ini?",
+  "language": "Bahasa",
+  "theme": "Tema",
+  "defaultCurrency": "Mata uang default",
+  "autoUpdateRates": "Perbarui nilai tukar secara otomatis",
+  "darkMode": "Mode gelap",
+  "customCurrency": "Mata uang kustom",
+  "currencyCode": "Kode mata uang",
+  "currencyName": "Nama mata uang",
+  "currencySymbol": "Simbol mata uang",
+  "exchangeRate": "Nilai tukar (ke USD)",
+  "manualRate": "Atur nilai tukar manual",
+  "updateRates": "Perbarui nilai tukar",
+  "lastUpdated": "Terakhir diperbarui",
+  "noAccounts": "Tidak ada akun ditemukan. Tambahkan akun pertama Anda!",
+  "noTransactions": "Tidak ada transaksi ditemukan.",
+  "searchPlaceholder": "Cari...",
+  "filterBy": "Filter berdasarkan",
+  "sortBy": "Urutkan berdasarkan",
+  "date": "Tanggal",
+  "name": "Nama",
+  "balance": "Saldo",
+  "recent": "Terbaru",
+  "oldest": "Terlama",
+  "recentAccounts": "Akun terbaru",
+  "noDescription": "Tidak ada deskripsi",
+  "net": "Bersih",
+  "exchangeRates": "Nilai tukar",
+  "dataManagement": "Manajemen data",
+  "resetAllData": "Reset semua data",
+  "updating": "Memperbarui...",
+  "fetchingRates": "Mengambil nilai tukar terbaru",
+  "ratesUpdated": "Nilai tukar berhasil diperbarui",
+  "updateFailed": "Gagal memperbarui nilai tukar",
+  "resetConfirm": "Ini akan secara permanen menghapus semua akun, transaksi, dan pengaturan. Tindakan ini tidak dapat dibatalkan.",
+  "allDataReset": "Semua data telah direset",
+  "resetFailed": "Gagal mereset data",
+  "success": "Berhasil",
+  "enterAccountName": "Masukkan nama akun",
+  "optionalDescription": "Deskripsi opsional",
+  "createCustomCurrency": "Buat mata uang kustom dengan memberikan kode, nama, simbol, dan nilai tukar ke USD.",
+  "currencyCodeHelper": "Kode mata uang 3 huruf",
+  "bitcoinExample": "Contoh: Bitcoin, Ethereum",
+  "symbolExample": "Contoh: ₿, Ξ, ₹",
+  "rateExample": "Contoh: 45000.00",
+  "rateHelper": "Berapa nilai 1 USD dalam mata uang Anda",
+  "exampleTitle": "Contoh:",
+  "exampleText": "Kode: BTC\nNama: Bitcoin\nSimbol: ₿\nNilai tukar: 0.000025 (jika 1 USD = 0.000025 BTC)",
+  "languageChanged": "Bahasa diubah",
+  "restartRequired": "Silakan mulai ulang aplikasi untuk menerapkan perubahan bahasa.",
+  "error": "Kesalahan",
+  "pleaseEnterAccountName": "Silakan masukkan nama akun",
+  "pleaseSelectCurrency": "Silakan pilih mata uang",
+  "accountUpdated": "Akun berhasil diperbarui",
+  "accountCreated": "Akun berhasil dibuat",
+  "accountActionFailed": "Gagal {action} akun",
+  "update": "perbarui",
+  "create": "buat",
+  "pleaseSelectAccount": "Silakan pilih akun",
+  "pleaseEnterDescription": "Silakan masukkan deskripsi",
+  "pleaseEnterPersonName": "Silakan masukkan nama orang atau perusahaan",
+  "pleaseEnterValidAmount": "Silakan masukkan jumlah yang valid",
+  "transactionUpdated": "Transaksi berhasil diperbarui",
+  "transactionAdded": "Transaksi berhasil ditambahkan",
+  "transactionActionFailed": "Gagal {action} transaksi",
   "amountPlaceholder": "0.00",
-  "transactionDescriptionPlaceholder": "What is this transaction for?",
-  "fillAllFields": "Please fill in all fields",
-  "currencyCodeInvalid": "Currency code must be exactly 3 letters (e.g., USD, EUR)",
-  "validExchangeRate": "Please enter a valid exchange rate",
-  "about": "About",
-  "appDescription": "Personal debt and credit tracking app",
-  "version": "Version",
-  "developer": "Developer",
-  "sourceCode": "Source Code",
+  "transactionDescriptionPlaceholder": "Untuk apa transaksi ini?",
+  "fillAllFields": "Silakan isi semua bidang",
+  "currencyCodeInvalid": "Kode mata uang harus tepat 3 huruf (misal: USD, EUR)",
+  "validExchangeRate": "Silakan masukkan nilai tukar yang valid",
+  "about": "Tentang",
+  "appDescription": "Aplikasi pelacak hutang dan kredit pribadi",
+  "version": "Versi",
+  "developer": "Pengembang",
+  "sourceCode": "Kode sumber",
   "privacy": "Privasi",
   "privacyDescription": "Data Anda tetap di perangkat Anda",
   "footerDescription": "LedgerWell membantu Anda melacak hutang dan kredit dengan dukungan multi-mata uang dan privasi lengkap.",
   "copyrightText": "© 2025 Sepehr Mohammady. Sumber terbuka di bawah Lisensi MIT.",
-  "currencyExists": "Currency {code} already exists",
-  "customCurrencyAdded": "Custom currency {code} added successfully",
-  "customCurrencyFailed": "Failed to add custom currency",
+  "currencyExists": "Mata uang {code} sudah ada",
+  "customCurrencyAdded": "Mata uang kustom {code} berhasil ditambahkan",
+  "customCurrencyUpdated": "Mata uang kustom {code} berhasil diperbarui",
+  "customCurrencyFailed": "Gagal menambahkan mata uang kustom",
+  "editCustomCurrency": "Edit Mata Uang Kustom",
+  "editCustomCurrencyInfo": "Perbarui detail mata uang kustom Anda. Nilai tukar harus relatif terhadap USD.",
   "currencyCodePlaceholder": "e.g., BTC, ETH",
   "currencyNamePlaceholder": "e.g., Bitcoin, Ethereum",
-  "personName": "Person/Company Name",
-  "personNamePlaceholder": "Who owes or is owed money?",
-  "transactionDescription": "Additional Notes",
-  "transactionDescriptionOptional": "Optional additional details",
-  "manageCustomCurrencies": "Manage Custom Currencies",
-  "createCustomCurrencyButton": "Create Custom Currency",
-  "customCurrencyDeleted": "Custom currency deleted successfully",
-  "account": "Account",
-  "confirmReset": "Are you sure you want to reset all data?",
-  "customCurrencyExample": "For example: Bitcoin (BTC)",
-  "noAccountsFound": "No accounts found",
-  "noTransactionsFound": "No transactions found",
+  "personName": "Nama orang/perusahaan",
+  "personNamePlaceholder": "Siapa yang berhutang atau yang berhak menerima uang?",
+  "transactionDescription": "Catatan tambahan",
+  "transactionDescriptionOptional": "Detail tambahan opsional",
+  "manageCustomCurrencies": "Kelola mata uang kustom",
+  "createCustomCurrencyButton": "Buat Mata Uang Kustom",
+  "customCurrencyDeleted": "Mata uang kustom berhasil dihapus",
+  "account": "Akun",
+  "confirmReset": "Apakah Anda yakin ingin mereset semua data?",
+  "customCurrencyExample": "Contoh: Bitcoin (BTC)",
+  "noAccountsFound": "Tidak ada akun ditemukan",
+  "noTransactionsFound": "Tidak ada transaksi ditemukan",
   "reset": "Reset",
-  "settingsSaveFailed": "Failed to save settings",
-  "totalBalance": "Total Balance"
+  "settingsSaveFailed": "Gagal menyimpan pengaturan",
+  "totalBalance": "Saldo total"
 }
