--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -1,123 +1,126 @@
 {
-  "dashboard": "Dashboard",
-  "accounts": "Accounts",
-  "transactions": "Transactions",
-  "settings": "Settings",
-  "welcome": "Welcome to LedgerWell",
-  "totalOwed": "Total I Owe",
-  "totalOwedToMe": "Total Owed to Me",
-  "netBalance": "Net Balance",
-  "addAccount": "Add Account",
-  "addTransaction": "Add Transaction",
-  "accountName": "Account Name",
-  "description": "Description",
-  "currency": "Currency",
-  "amount": "Amount",
-  "type": "Type",
-  "debt": "I Owe Money",
-  "credit": "Someone Owes Me",
-  "save": "Save",
-  "cancel": "Cancel",
-  "edit": "Edit",
-  "delete": "Delete",
-  "confirm": "Confirm",
-  "confirmDelete": "Are you sure you want to delete this item?",
-  "language": "Language",
-  "theme": "Theme",
-  "defaultCurrency": "Default Currency",
-  "autoUpdateRates": "Auto Update Exchange Rates",
-  "darkMode": "Dark Mode",
-  "customCurrency": "Custom Currency",
-  "currencyCode": "Currency Code",
-  "currencyName": "Currency Name",
-  "currencySymbol": "Currency Symbol",
-  "exchangeRate": "Exchange Rate (to USD)",
-  "manualRate": "Set Manual Rate",
-  "updateRates": "Update Exchange Rates",
-  "lastUpdated": "Last Updated",
-  "noAccounts": "No accounts found. Add your first account!",
-  "noTransactions": "No transactions found.",
-  "searchPlaceholder": "Search...",
-  "filterBy": "Filter By",
-  "sortBy": "Sort By",
-  "date": "Date",
-  "name": "Name",
-  "balance": "Balance",
-  "recent": "Recent",
-  "oldest": "Oldest",
-  "recentAccounts": "Recent Accounts",
-  "noDescription": "No description",
-  "net": "Net",
-  "exchangeRates": "Exchange Rates",
-  "dataManagement": "Data Management",
-  "resetAllData": "Reset All Data",
-  "updating": "Updating...",
-  "fetchingRates": "Fetching latest exchange rates",
-  "ratesUpdated": "Exchange rates updated successfully",
-  "updateFailed": "Failed to update exchange rates",
-  "resetConfirm": "This will permanently delete all accounts, transactions, and settings. This action cannot be undone.",
-  "allDataReset": "All data has been reset",
-  "resetFailed": "Failed to reset data",
-  "success": "Success",
-  "enterAccountName": "Enter account name",
-  "optionalDescription": "Optional description",
-  "createCustomCurrency": "Create a custom currency by providing the currency code, name, symbol, and exchange rate to USD.",
-  "currencyCodeHelper": "3 letter currency code",
-  "bitcoinExample": "e.g., Bitcoin, Ethereum",
-  "symbolExample": "e.g., ₿, Ξ, ₹",
-  "rateExample": "e.g., 45000.00",
-  "rateHelper": "How much 1 USD equals in your currency",
-  "exampleTitle": "Example:",
-  "exampleText": "Code: BTC\nName: Bitcoin\nSymbol: ₿\nRate: 0.000025 (if 1 USD = 0.000025 BTC)",
-  "languageChanged": "Language Changed",
-  "restartRequired": "Please restart the app to apply the layout changes for the new language.",
-  "error": "Error",
-  "pleaseEnterAccountName": "Please enter an account name",
-  "pleaseSelectCurrency": "Please select a currency",
-  "accountUpdated": "Account updated successfully",
-  "accountCreated": "Account created successfully",
-  "accountActionFailed": "Failed to {action} account",
-  "update": "update",
-  "create": "create",
-  "pleaseSelectAccount": "Please select an account",
-  "pleaseEnterDescription": "Please enter a description",
-  "pleaseEnterPersonName": "Please enter a person or company name",
-  "pleaseEnterValidAmount": "Please enter a valid amount",
-  "transactionUpdated": "Transaction updated successfully",
-  "transactionAdded": "Transaction added successfully",
-  "transactionActionFailed": "Failed to {action} transaction",
+  "dashboard": "대시보드",
+  "accounts": "계정",
+  "transactions": "거래",
+  "settings": "설정",
+  "welcome": "LedgerWell에 오신 것을 환영합니다",
+  "totalOwed": "내가 빚진 총액",
+  "totalOwedToMe": "내가 받을 총액",
+  "netBalance": "순 잔액",
+  "addAccount": "계정 추가",
+  "addTransaction": "거래 추가",
+  "accountName": "계정 이름",
+  "description": "설명",
+  "currency": "통화",
+  "amount": "금액",
+  "type": "유형",
+  "debt": "내가 빚진 돈",
+  "credit": "누군가가 나에게 빚진 돈",
+  "save": "저장",
+  "cancel": "취소",
+  "edit": "편집",
+  "delete": "삭제",
+  "confirm": "확인",
+  "confirmDelete": "이 항목을 삭제하시겠습니까?",
+  "language": "언어",
+  "theme": "테마",
+  "defaultCurrency": "기본 통화",
+  "autoUpdateRates": "환율 자동 업데이트",
+  "darkMode": "다크 모드",
+  "customCurrency": "사용자 정의 통화",
+  "currencyCode": "통화 코드",
+  "currencyName": "통화 이름",
+  "currencySymbol": "통화 기호",
+  "exchangeRate": "환율 (USD 기준)",
+  "manualRate": "수동 환율 설정",
+  "updateRates": "환율 업데이트",
+  "lastUpdated": "마지막 업데이트",
+  "noAccounts": "계정이 없습니다. 첫 계정을 추가하세요!",
+  "noTransactions": "거래가 없습니다.",
+  "searchPlaceholder": "검색...",
+  "filterBy": "필터 기준",
+  "sortBy": "정렬 기준",
+  "date": "날짜",
+  "name": "이름",
+  "balance": "잔액",
+  "recent": "최근",
+  "oldest": "가장 오래된",
+  "recentAccounts": "최근 계정",
+  "noDescription": "설명 없음",
+  "net": "순액",
+  "exchangeRates": "환율",
+  "dataManagement": "데이터 관리",
+  "resetAllData": "모든 데이터 초기화",
+  "updating": "업데이트 중...",
+  "fetchingRates": "최신 환율 가져오는 중",
+  "ratesUpdated": "환율이 성공적으로 업데이트되었습니다",
+  "updateFailed": "환율 업데이트에 실패했습니다",
+  "resetConfirm": "이 작업은 모든 계정, 거래 및 설정을 영구적으로 삭제합니다. 이 작업은 되돌릴 수 없습니다.",
+  "allDataReset": "모든 데이터가 초기화되었습니다",
+  "resetFailed": "데이터 초기화에 실패했습니다",
+  "success": "성공",
+  "enterAccountName": "계정 이름을 입력하세요",
+  "optionalDescription": "선택 설명",
+  "createCustomCurrency": "통화 코드, 이름, 기호, USD 대비 환율을 입력하여 사용자 정의 통화를 생성하세요.",
+  "currencyCodeHelper": "3글자 통화 코드",
+  "bitcoinExample": "예: 비트코인, 이더리움",
+  "symbolExample": "예: ₿, Ξ, ₹",
+  "rateExample": "예: 45000.00",
+  "rateHelper": "1 USD가 귀하의 통화로 얼마인지",
+  "exampleTitle": "예시:",
+  "exampleText": "코드: BTC\n이름: 비트코인\n기호: ₿\n환율: 0.000025 (1 USD = 0.000025 BTC인 경우)",
+  "languageChanged": "언어가 변경되었습니다",
+  "restartRequired": "새 언어의 레이아웃 변경을 적용하려면 앱을 다시 시작하세요.",
+  "error": "오류",
+  "pleaseEnterAccountName": "계정 이름을 입력하세요",
+  "pleaseSelectCurrency": "통화를 선택하세요",
+  "accountUpdated": "계정이 성공적으로 업데이트되었습니다",
+  "accountCreated": "계정이 성공적으로 생성되었습니다",
+  "accountActionFailed": "{action} 계정에 실패했습니다",
+  "update": "업데이트",
+  "create": "생성",
+  "pleaseSelectAccount": "계정을 선택하세요",
+  "pleaseEnterDescription": "설명을 입력하세요",
+  "pleaseEnterPersonName": "사람 또는 회사 이름을 입력하세요",
+  "pleaseEnterValidAmount": "유효한 금액을 입력하세요",
+  "transactionUpdated": "거래가 성공적으로 업데이트되었습니다",
+  "transactionAdded": "거래가 성공적으로 추가되었습니다",
+  "transactionActionFailed": "{action} 거래에 실패했습니다",
   "amountPlaceholder": "0.00",
-  "transactionDescriptionPlaceholder": "What is this transaction for?",
-  "fillAllFields": "Please fill in all fields",
-  "currencyCodeInvalid": "Currency code must be exactly 3 letters (e.g., USD, EUR)",
-  "validExchangeRate": "Please enter a valid exchange rate",
-  "about": "About",
-  "appDescription": "Personal debt and credit tracking app",
-  "version": "Version",
-  "developer": "Developer",
-  "sourceCode": "Source Code",
+  "transactionDescriptionPlaceholder": "이 거래의 목적은 무엇입니까?",
+  "fillAllFields": "모든 필드를 입력하세요",
+  "currencyCodeInvalid": "통화 코드는 정확히 3글자여야 합니다 (예: USD, EUR)",
+  "validExchangeRate": "유효한 환율을 입력하세요",
+  "about": "정보",
+  "appDescription": "개인 부채 및 신용 추적 앱",
+  "version": "버전",
+  "developer": "개발자",
+  "sourceCode": "소스 코드",
   "privacy": "개인정보 보호",
   "privacyDescription": "귀하의 데이터는 귀하의 기기에 남아있습니다",
   "footerDescription": "LedgerWell은 다중 통화 지원과 완전한 개인정보 보호로 부채와 신용을 추적하는 데 도움을 줍니다.",
   "copyrightText": "© 2025 Sepehr Mohammady. MIT 라이센스 하의 오픈 소스.",
-  "currencyExists": "Currency {code} already exists",
-  "customCurrencyAdded": "Custom currency {code} added successfully",
-  "customCurrencyFailed": "Failed to add custom currency",
+  "currencyExists": "통화 {code}가 이미 존재합니다",
+  "customCurrencyAdded": "사용자 정의 통화 {code}가 성공적으로 추가되었습니다",
+  "customCurrencyUpdated": "사용자 정의 통화 {code}가 성공적으로 업데이트되었습니다",
+  "customCurrencyFailed": "사용자 정의 통화 추가에 실패했습니다",
+  "editCustomCurrency": "사용자 정의 통화 편집",
+  "editCustomCurrencyInfo": "사용자 정의 통화의 세부 정보를 업데이트하세요. 환율은 USD 대비 상대적이어야 합니다.",
   "currencyCodePlaceholder": "e.g., BTC, ETH",
   "currencyNamePlaceholder": "e.g., Bitcoin, Ethereum",
-  "personName": "Person/Company Name",
-  "personNamePlaceholder": "Who owes or is owed money?",
-  "transactionDescription": "Additional Notes",
-  "transactionDescriptionOptional": "Optional additional details",
-  "manageCustomCurrencies": "Manage Custom Currencies",
-  "createCustomCurrencyButton": "Create Custom Currency",
-  "customCurrencyDeleted": "Custom currency deleted successfully",
-  "account": "Account",
-  "confirmReset": "Are you sure you want to reset all data?",
-  "customCurrencyExample": "For example: Bitcoin (BTC)",
-  "noAccountsFound": "No accounts found",
-  "noTransactionsFound": "No transactions found",
-  "reset": "Reset",
-  "settingsSaveFailed": "Failed to save settings",
-  "totalBalance": "Total Balance"
+  "personName": "사람/회사 이름",
+  "personNamePlaceholder": "누가 빚졌거나 빚을 받아야 합니까?",
+  "transactionDescription": "추가 메모",
+  "transactionDescriptionOptional": "추가 세부 정보 (선택)",
+  "manageCustomCurrencies": "사용자 정의 통화 관리",
+  "createCustomCurrencyButton": "사용자 정의 통화 생성",
+  "customCurrencyDeleted": "사용자 정의 통화가 성공적으로 삭제되었습니다",
+  "account": "계정",
+  "confirmReset": "모든 데이터를 초기화하시겠습니까?",
+  "customCurrencyExample": "예: 비트코인 (BTC)",
+  "noAccountsFound": "계정이 없습니다",
+  "noTransactionsFound": "거래가 없습니다",
+  "reset": "초기화",
+  "settingsSaveFailed": "설정 저장에 실패했습니다",
+  "totalBalance": "총 잔액"
 }
