--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -1,123 +1,126 @@
 {
-  "dashboard": "Dashboard",
-  "accounts": "Accounts",
-  "transactions": "Transactions",
-  "settings": "Settings",
-  "welcome": "Welcome to LedgerWell",
-  "totalOwed": "Total I Owe",
-  "totalOwedToMe": "Total Owed to Me",
-  "netBalance": "Net Balance",
-  "addAccount": "Add Account",
-  "addTransaction": "Add Transaction",
-  "accountName": "Account Name",
-  "description": "Description",
-  "currency": "Currency",
-  "amount": "Amount",
-  "type": "Type",
-  "debt": "I Owe Money",
-  "credit": "Someone Owes Me",
-  "save": "Save",
-  "cancel": "Cancel",
-  "edit": "Edit",
-  "delete": "Delete",
-  "confirm": "Confirm",
-  "confirmDelete": "Are you sure you want to delete this item?",
-  "language": "Language",
-  "theme": "Theme",
-  "defaultCurrency": "Default Currency",
-  "autoUpdateRates": "Auto Update Exchange Rates",
-  "darkMode": "Dark Mode",
-  "customCurrency": "Custom Currency",
-  "currencyCode": "Currency Code",
-  "currencyName": "Currency Name",
-  "currencySymbol": "Currency Symbol",
-  "exchangeRate": "Exchange Rate (to USD)",
-  "manualRate": "Set Manual Rate",
-  "updateRates": "Update Exchange Rates",
-  "lastUpdated": "Last Updated",
-  "noAccounts": "No accounts found. Add your first account!",
-  "noTransactions": "No transactions found.",
-  "searchPlaceholder": "Search...",
-  "filterBy": "Filter By",
-  "sortBy": "Sort By",
-  "date": "Date",
-  "name": "Name",
-  "balance": "Balance",
-  "recent": "Recent",
-  "oldest": "Oldest",
-  "recentAccounts": "Recent Accounts",
-  "noDescription": "No description",
-  "net": "Net",
-  "exchangeRates": "Exchange Rates",
-  "dataManagement": "Data Management",
-  "resetAllData": "Reset All Data",
-  "updating": "Updating...",
-  "fetchingRates": "Fetching latest exchange rates",
-  "ratesUpdated": "Exchange rates updated successfully",
-  "updateFailed": "Failed to update exchange rates",
-  "resetConfirm": "This will permanently delete all accounts, transactions, and settings. This action cannot be undone.",
-  "allDataReset": "All data has been reset",
-  "resetFailed": "Failed to reset data",
-  "success": "Success",
-  "enterAccountName": "Enter account name",
-  "optionalDescription": "Optional description",
-  "createCustomCurrency": "Create a custom currency by providing the currency code, name, symbol, and exchange rate to USD.",
-  "currencyCodeHelper": "3 letter currency code",
-  "bitcoinExample": "e.g., Bitcoin, Ethereum",
-  "symbolExample": "e.g., ₿, Ξ, ₹",
-  "rateExample": "e.g., 45000.00",
-  "rateHelper": "How much 1 USD equals in your currency",
-  "exampleTitle": "Example:",
-  "exampleText": "Code: BTC\nName: Bitcoin\nSymbol: ₿\nRate: 0.000025 (if 1 USD = 0.000025 BTC)",
-  "languageChanged": "Language Changed",
-  "restartRequired": "Please restart the app to apply the layout changes for the new language.",
-  "error": "Error",
-  "pleaseEnterAccountName": "Please enter an account name",
-  "pleaseSelectCurrency": "Please select a currency",
-  "accountUpdated": "Account updated successfully",
-  "accountCreated": "Account created successfully",
-  "accountActionFailed": "Failed to {action} account",
-  "update": "update",
-  "create": "create",
-  "pleaseSelectAccount": "Please select an account",
-  "pleaseEnterDescription": "Please enter a description",
-  "pleaseEnterPersonName": "Please enter a person or company name",
-  "pleaseEnterValidAmount": "Please enter a valid amount",
-  "transactionUpdated": "Transaction updated successfully",
-  "transactionAdded": "Transaction added successfully",
-  "transactionActionFailed": "Failed to {action} transaction",
+  "dashboard": "仪表板",
+  "accounts": "账户",
+  "transactions": "交易",
+  "settings": "设置",
+  "welcome": "欢迎使用 LedgerWell",
+  "totalOwed": "我所欠总额",
+  "totalOwedToMe": "别人欠我的总额",
+  "netBalance": "净余额",
+  "addAccount": "添加账户",
+  "addTransaction": "添加交易",
+  "accountName": "账户名称",
+  "description": "描述",
+  "currency": "货币",
+  "amount": "金额",
+  "type": "类型",
+  "debt": "我欠钱",
+  "credit": "别人欠我钱",
+  "save": "保存",
+  "cancel": "取消",
+  "edit": "编辑",
+  "delete": "删除",
+  "confirm": "确认",
+  "confirmDelete": "您确定要删除此项吗？",
+  "language": "语言",
+  "theme": "主题",
+  "defaultCurrency": "默认货币",
+  "autoUpdateRates": "自动更新汇率",
+  "darkMode": "深色模式",
+  "customCurrency": "自定义货币",
+  "currencyCode": "货币代码",
+  "currencyName": "货币名称",
+  "currencySymbol": "货币符号",
+  "exchangeRate": "汇率（兑美元）",
+  "manualRate": "设置手动汇率",
+  "updateRates": "更新汇率",
+  "lastUpdated": "最后更新",
+  "noAccounts": "未找到账户。添加您的第一个账户！",
+  "noTransactions": "未找到交易。",
+  "searchPlaceholder": "搜索...",
+  "filterBy": "筛选依据",
+  "sortBy": "排序依据",
+  "date": "日期",
+  "name": "名称",
+  "balance": "余额",
+  "recent": "最近",
+  "oldest": "最早",
+  "recentAccounts": "最近账户",
+  "noDescription": "无描述",
+  "net": "净值",
+  "exchangeRates": "汇率",
+  "dataManagement": "数据管理",
+  "resetAllData": "重置所有数据",
+  "updating": "正在更新...",
+  "fetchingRates": "正在获取最新汇率",
+  "ratesUpdated": "汇率已成功更新",
+  "updateFailed": "更新汇率失败",
+  "resetConfirm": "这将永久删除所有账户、交易和设置。此操作无法撤销。",
+  "allDataReset": "所有数据已重置",
+  "resetFailed": "重置数据失败",
+  "success": "成功",
+  "enterAccountName": "请输入账户名称",
+  "optionalDescription": "可选描述",
+  "createCustomCurrency": "通过提供货币代码、名称、符号和兑美元汇率来创建自定义货币。",
+  "currencyCodeHelper": "三字母货币代码",
+  "bitcoinExample": "例如：比特币，以太坊",
+  "symbolExample": "例如：₿、Ξ、₹",
+  "rateExample": "例如：45000.00",
+  "rateHelper": "1美元等于您的货币多少",
+  "exampleTitle": "示例：",
+  "exampleText": "代码: BTC\n名称: 比特币\n符号: ₿\n汇率: 0.000025 (如果1美元=0.000025 BTC)",
+  "languageChanged": "语言已更改",
+  "restartRequired": "请重新启动应用以应用新语言的布局更改。",
+  "error": "错误",
+  "pleaseEnterAccountName": "请输入账户名称",
+  "pleaseSelectCurrency": "请选择货币",
+  "accountUpdated": "账户已成功更新",
+  "accountCreated": "账户已成功创建",
+  "accountActionFailed": "{action}账户失败",
+  "update": "更新",
+  "create": "创建",
+  "pleaseSelectAccount": "请选择账户",
+  "pleaseEnterDescription": "请输入描述",
+  "pleaseEnterPersonName": "请输入个人或公司名称",
+  "pleaseEnterValidAmount": "请输入有效金额",
+  "transactionUpdated": "交易已成功更新",
+  "transactionAdded": "交易已成功添加",
+  "transactionActionFailed": "{action}交易失败",
   "amountPlaceholder": "0.00",
-  "transactionDescriptionPlaceholder": "What is this transaction for?",
-  "fillAllFields": "Please fill in all fields",
-  "currencyCodeInvalid": "Currency code must be exactly 3 letters (e.g., USD, EUR)",
-  "validExchangeRate": "Please enter a valid exchange rate",
-  "about": "About",
-  "appDescription": "Personal debt and credit tracking app",
-  "version": "Version",
-  "developer": "Developer",
-  "sourceCode": "Source Code",
+  "transactionDescriptionPlaceholder": "此交易的用途是什么？",
+  "fillAllFields": "请填写所有字段",
+  "currencyCodeInvalid": "货币代码必须正好为3个字母（例如：USD、EUR）",
+  "validExchangeRate": "请输入有效汇率",
+  "about": "关于",
+  "appDescription": "个人债务和信贷跟踪应用",
+  "version": "版本",
+  "developer": "开发者",
+  "sourceCode": "源代码",
   "privacy": "隐私",
   "privacyDescription": "您的数据保留在您的设备上",
   "footerDescription": "LedgerWell 帮助您跟踪债务和信贷，具有多货币支持和完整隐私。",
   "copyrightText": "© 2025 Sepehr Mohammady. MIT 许可证下的开源软件。",
-  "currencyExists": "Currency {code} already exists",
-  "customCurrencyAdded": "Custom currency {code} added successfully",
-  "customCurrencyFailed": "Failed to add custom currency",
+  "currencyExists": "货币 {code} 已存在",
+  "customCurrencyAdded": "自定义货币 {code} 添加成功",
+  "customCurrencyUpdated": "自定义货币 {code} 更新成功",
+  "customCurrencyFailed": "添加自定义货币失败",
+  "editCustomCurrency": "编辑自定义货币",
+  "editCustomCurrencyInfo": "更新您的自定义货币详细信息。汇率应相对于美元。",
   "currencyCodePlaceholder": "e.g., BTC, ETH",
   "currencyNamePlaceholder": "e.g., Bitcoin, Ethereum",
-  "personName": "Person/Company Name",
-  "personNamePlaceholder": "Who owes or is owed money?",
-  "transactionDescription": "Additional Notes",
-  "transactionDescriptionOptional": "Optional additional details",
-  "manageCustomCurrencies": "Manage Custom Currencies",
-  "createCustomCurrencyButton": "Create Custom Currency",
-  "customCurrencyDeleted": "Custom currency deleted successfully",
-  "account": "Account",
-  "confirmReset": "Are you sure you want to reset all data?",
-  "customCurrencyExample": "For example: Bitcoin (BTC)",
-  "noAccountsFound": "No accounts found",
-  "noTransactionsFound": "No transactions found",
-  "reset": "Reset",
-  "settingsSaveFailed": "Failed to save settings",
-  "totalBalance": "Total Balance"
+  "personName": "个人/公司名称",
+  "personNamePlaceholder": "谁欠钱或被欠钱？",
+  "transactionDescription": "附加说明",
+  "transactionDescriptionOptional": "可选附加细节",
+  "manageCustomCurrencies": "管理自定义货币",
+  "createCustomCurrencyButton": "创建自定义货币",
+  "customCurrencyDeleted": "自定义货币已成功删除",
+  "account": "账户",
+  "confirmReset": "您确定要重置所有数据吗？",
+  "customCurrencyExample": "例如：比特币 (BTC)",
+  "noAccountsFound": "未找到账户",
+  "noTransactionsFound": "未找到交易",
+  "reset": "重置",
+  "settingsSaveFailed": "保存设置失败",
+  "totalBalance": "总余额"
 }
