--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -1,123 +1,126 @@
 {
-  "dashboard": "Dashboard",
-  "accounts": "Accounts",
-  "transactions": "Transactions",
-  "settings": "Settings",
-  "welcome": "Welcome to LedgerWell",
-  "totalOwed": "Total I Owe",
-  "totalOwedToMe": "Total Owed to Me",
-  "netBalance": "Net Balance",
-  "addAccount": "Add Account",
-  "addTransaction": "Add Transaction",
-  "accountName": "Account Name",
-  "description": "Description",
-  "currency": "Currency",
-  "amount": "Amount",
-  "type": "Type",
-  "debt": "I Owe Money",
-  "credit": "Someone Owes Me",
-  "save": "Save",
-  "cancel": "Cancel",
-  "edit": "Edit",
-  "delete": "Delete",
-  "confirm": "Confirm",
-  "confirmDelete": "Are you sure you want to delete this item?",
-  "language": "Language",
-  "theme": "Theme",
-  "defaultCurrency": "Default Currency",
-  "autoUpdateRates": "Auto Update Exchange Rates",
-  "darkMode": "Dark Mode",
-  "customCurrency": "Custom Currency",
-  "currencyCode": "Currency Code",
-  "currencyName": "Currency Name",
-  "currencySymbol": "Currency Symbol",
-  "exchangeRate": "Exchange Rate (to USD)",
-  "manualRate": "Set Manual Rate",
-  "updateRates": "Update Exchange Rates",
-  "lastUpdated": "Last Updated",
-  "noAccounts": "No accounts found. Add your first account!",
-  "noTransactions": "No transactions found.",
-  "searchPlaceholder": "Search...",
-  "filterBy": "Filter By",
-  "sortBy": "Sort By",
-  "date": "Date",
-  "name": "Name",
-  "balance": "Balance",
-  "recent": "Recent",
-  "oldest": "Oldest",
-  "recentAccounts": "Recent Accounts",
-  "noDescription": "No description",
-  "net": "Net",
-  "exchangeRates": "Exchange Rates",
-  "dataManagement": "Data Management",
-  "resetAllData": "Reset All Data",
-  "updating": "Updating...",
-  "fetchingRates": "Fetching latest exchange rates",
-  "ratesUpdated": "Exchange rates updated successfully",
-  "updateFailed": "Failed to update exchange rates",
-  "resetConfirm": "This will permanently delete all accounts, transactions, and settings. This action cannot be undone.",
-  "allDataReset": "All data has been reset",
-  "resetFailed": "Failed to reset data",
-  "success": "Success",
-  "enterAccountName": "Enter account name",
-  "optionalDescription": "Optional description",
-  "createCustomCurrency": "Create a custom currency by providing the currency code, name, symbol, and exchange rate to USD.",
-  "currencyCodeHelper": "3 letter currency code",
-  "bitcoinExample": "e.g., Bitcoin, Ethereum",
-  "symbolExample": "e.g., ₿, Ξ, ₹",
-  "rateExample": "e.g., 45000.00",
-  "rateHelper": "How much 1 USD equals in your currency",
-  "exampleTitle": "Example:",
-  "exampleText": "Code: BTC\nName: Bitcoin\nSymbol: ₿\nRate: 0.000025 (if 1 USD = 0.000025 BTC)",
-  "languageChanged": "Language Changed",
-  "restartRequired": "Please restart the app to apply the layout changes for the new language.",
-  "error": "Error",
-  "pleaseEnterAccountName": "Please enter an account name",
-  "pleaseSelectCurrency": "Please select a currency",
-  "accountUpdated": "Account updated successfully",
-  "accountCreated": "Account created successfully",
-  "accountActionFailed": "Failed to {action} account",
-  "update": "update",
-  "create": "create",
-  "pleaseSelectAccount": "Please select an account",
-  "pleaseEnterDescription": "Please enter a description",
-  "pleaseEnterPersonName": "Please enter a person or company name",
-  "pleaseEnterValidAmount": "Please enter a valid amount",
-  "transactionUpdated": "Transaction updated successfully",
-  "transactionAdded": "Transaction added successfully",
-  "transactionActionFailed": "Failed to {action} transaction",
+  "dashboard": "لوحة التحكم",
+  "accounts": "الحسابات",
+  "transactions": "المعاملات",
+  "settings": "الإعدادات",
+  "welcome": "مرحبًا بك في LedgerWell",
+  "totalOwed": "إجمالي ما أدين به",
+  "totalOwedToMe": "إجمالي ما يدين لي به الآخرون",
+  "netBalance": "الرصيد الصافي",
+  "addAccount": "إضافة حساب",
+  "addTransaction": "إضافة معاملة",
+  "accountName": "اسم الحساب",
+  "description": "الوصف",
+  "currency": "العملة",
+  "amount": "المبلغ",
+  "type": "النوع",
+  "debt": "أنا مدين بالمال",
+  "credit": "شخص ما مدين لي",
+  "save": "حفظ",
+  "cancel": "إلغاء",
+  "edit": "تعديل",
+  "delete": "حذف",
+  "confirm": "تأكيد",
+  "confirmDelete": "هل أنت متأكد أنك تريد حذف هذا العنصر؟",
+  "language": "اللغة",
+  "theme": "السمة",
+  "defaultCurrency": "العملة الافتراضية",
+  "autoUpdateRates": "تحديث أسعار الصرف تلقائيًا",
+  "darkMode": "الوضع الداكن",
+  "customCurrency": "عملة مخصصة",
+  "currencyCode": "رمز العملة",
+  "currencyName": "اسم العملة",
+  "currencySymbol": "رمز العملة",
+  "exchangeRate": "سعر الصرف (مقابل الدولار)",
+  "manualRate": "تعيين سعر يدوي",
+  "updateRates": "تحديث أسعار الصرف",
+  "lastUpdated": "آخر تحديث",
+  "noAccounts": "لم يتم العثور على حسابات. أضف أول حساب لك!",
+  "noTransactions": "لم يتم العثور على معاملات.",
+  "searchPlaceholder": "بحث...",
+  "filterBy": "تصفية حسب",
+  "sortBy": "ترتيب حسب",
+  "date": "التاريخ",
+  "name": "الاسم",
+  "balance": "الرصيد",
+  "recent": "الأحدث",
+  "oldest": "الأقدم",
+  "recentAccounts": "الحسابات الحديثة",
+  "noDescription": "لا يوجد وصف",
+  "net": "صافي",
+  "exchangeRates": "أسعار الصرف",
+  "dataManagement": "إدارة البيانات",
+  "resetAllData": "إعادة تعيين جميع البيانات",
+  "updating": "جارٍ التحديث...",
+  "fetchingRates": "جلب أحدث أسعار الصرف",
+  "ratesUpdated": "تم تحديث أسعار الصرف بنجاح",
+  "updateFailed": "فشل في تحديث أسعار الصرف",
+  "resetConfirm": "سيؤدي هذا إلى حذف جميع الحسابات والمعاملات والإعدادات نهائيًا. لا يمكن التراجع عن هذا الإجراء.",
+  "allDataReset": "تمت إعادة تعيين جميع البيانات",
+  "resetFailed": "فشل في إعادة تعيين البيانات",
+  "success": "نجاح",
+  "enterAccountName": "أدخل اسم الحساب",
+  "optionalDescription": "وصف اختياري",
+  "createCustomCurrency": "أنشئ عملة مخصصة عن طريق إدخال رمز العملة والاسم والرمز وسعر الصرف مقابل الدولار.",
+  "currencyCodeHelper": "رمز عملة مكون من ٣ أحرف",
+  "bitcoinExample": "مثال: بيتكوين، إيثريوم",
+  "symbolExample": "مثال: ₿، Ξ، ₹",
+  "rateExample": "مثال: ٤٥٠٠٠.٠٠",
+  "rateHelper": "كم يساوي ١ دولار أمريكي في عملتك",
+  "exampleTitle": "مثال:",
+  "exampleText": "الرمز: BTC\nالاسم: بيتكوين\nالرمز: ₿\nالسعر: ٠.٠٠٠٠٢٥ (إذا كان ١ دولار = ٠.٠٠٠٠٢٥ BTC)",
+  "languageChanged": "تم تغيير اللغة",
+  "restartRequired": "يرجى إعادة تشغيل التطبيق لتطبيق تغييرات اللغة الجديدة.",
+  "error": "خطأ",
+  "pleaseEnterAccountName": "يرجى إدخال اسم الحساب",
+  "pleaseSelectCurrency": "يرجى اختيار عملة",
+  "accountUpdated": "تم تحديث الحساب بنجاح",
+  "accountCreated": "تم إنشاء الحساب بنجاح",
+  "accountActionFailed": "فشل في {action} الحساب",
+  "update": "تحديث",
+  "create": "إنشاء",
+  "pleaseSelectAccount": "يرجى اختيار حساب",
+  "pleaseEnterDescription": "يرجى إدخال وصف",
+  "pleaseEnterPersonName": "يرجى إدخال اسم شخص أو شركة",
+  "pleaseEnterValidAmount": "يرجى إدخال مبلغ صالح",
+  "transactionUpdated": "تم تحديث المعاملة بنجاح",
+  "transactionAdded": "تمت إضافة المعاملة بنجاح",
+  "transactionActionFailed": "فشل في {action} المعاملة",
   "amountPlaceholder": "0.00",
-  "transactionDescriptionPlaceholder": "What is this transaction for?",
-  "fillAllFields": "Please fill in all fields",
-  "currencyCodeInvalid": "Currency code must be exactly 3 letters (e.g., USD, EUR)",
-  "validExchangeRate": "Please enter a valid exchange rate",
-  "about": "About",
-  "appDescription": "Personal debt and credit tracking app",
-  "version": "Version",
-  "developer": "Developer",
-  "sourceCode": "Source Code",
+  "transactionDescriptionPlaceholder": "ما سبب هذه المعاملة؟",
+  "fillAllFields": "يرجى ملء جميع الحقول",
+  "currencyCodeInvalid": "يجب أن يكون رمز العملة مكونًا من ٣ أحرف بالضبط (مثل USD، EUR)",
+  "validExchangeRate": "يرجى إدخال سعر صرف صالح",
+  "about": "حول",
+  "appDescription": "تطبيق لتتبع الديون والائتمان الشخصي",
+  "version": "الإصدار",
+  "developer": "المطور",
+  "sourceCode": "الكود المصدري",
   "privacy": "الخصوصية",
   "privacyDescription": "بياناتك تبقى على جهازك",
   "footerDescription": "LedgerWell يساعدك في تتبع الديون والائتمان مع دعم متعدد العملات وخصوصية كاملة.",
-  "copyrightText": "© 2025 Sepehr Mohammady. مفتوح المصدر تحت رخصة MIT.",
-  "currencyExists": "Currency {code} already exists",
-  "customCurrencyAdded": "Custom currency {code} added successfully",
-  "customCurrencyFailed": "Failed to add custom currency",
-  "currencyCodePlaceholder": "e.g., BTC, ETH",
-  "currencyNamePlaceholder": "e.g., Bitcoin, Ethereum",
-  "personName": "Person/Company Name",
-  "personNamePlaceholder": "Who owes or is owed money?",
-  "transactionDescription": "Additional Notes",
-  "transactionDescriptionOptional": "Optional additional details",
-  "manageCustomCurrencies": "Manage Custom Currencies",
-  "createCustomCurrencyButton": "Create Custom Currency",
-  "customCurrencyDeleted": "Custom currency deleted successfully",
-  "account": "Account",
-  "confirmReset": "Are you sure you want to reset all data?",
-  "customCurrencyExample": "For example: Bitcoin (BTC)",
-  "noAccountsFound": "No accounts found",
-  "noTransactionsFound": "No transactions found",
-  "reset": "Reset",
-  "settingsSaveFailed": "Failed to save settings",
-  "totalBalance": "Total Balance"
+  "copyrightText": "© ٢٠٢٥ Sepehr Mohammady. مفتوح المصدر تحت رخصة MIT.",
+  "currencyExists": "العملة {code} موجودة بالفعل",
+    "customCurrencyAdded": "تم إضافة العملة المخصصة {code} بنجاح",
+  "customCurrencyUpdated": "تم تحديث العملة المخصصة {code} بنجاح",
+  "customCurrencyFailed": "فشل في إضافة العملة المخصصة",
+  "editCustomCurrency": "تعديل العملة المخصصة",
+  "editCustomCurrencyInfo": "قم بتحديث تفاصيل عملتك المخصصة. يجب أن يكون سعر الصرف نسبة إلى الدولار الأمريكي.",
+  "currencyCodePlaceholder": "مثال: BTC، ETH",
+  "currencyNamePlaceholder": "مثال: بيتكوين، إيثريوم",
+  "personName": "اسم الشخص أو الشركة",
+  "personNamePlaceholder": "من يدين أو يُدان بالمال؟",
+  "transactionDescription": "ملاحظات إضافية",
+  "transactionDescriptionOptional": "تفاصيل إضافية اختيارية",
+  "manageCustomCurrencies": "إدارة العملات المخصصة",
+  "createCustomCurrencyButton": "إنشاء عملة مخصصة",
+  "customCurrencyDeleted": "تم حذف العملة المخصصة بنجاح",
+  "account": "الحساب",
+  "confirmReset": "هل أنت متأكد أنك تريد إعادة تعيين جميع البيانات؟",
+  "customCurrencyExample": "مثال: بيتكوين (BTC)",
+  "noAccountsFound": "لم يتم العثور على حسابات",
+  "noTransactionsFound": "لم يتم العثور على معاملات",
+  "reset": "إعادة تعيين",
+  "settingsSaveFailed": "فشل في حفظ الإعدادات",
+  "totalBalance": "إجمالي الرصيد"
 }
