--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,123 +1,126 @@
 {
-  "dashboard": "Dashboard",
-  "accounts": "Accounts",
-  "transactions": "Transactions",
-  "settings": "Settings",
-  "welcome": "Welcome to LedgerWell",
-  "totalOwed": "Total I Owe",
-  "totalOwedToMe": "Total Owed to Me",
-  "netBalance": "Net Balance",
-  "addAccount": "Add Account",
-  "addTransaction": "Add Transaction",
-  "accountName": "Account Name",
-  "description": "Description",
-  "currency": "Currency",
-  "amount": "Amount",
-  "type": "Type",
-  "debt": "I Owe Money",
-  "credit": "Someone Owes Me",
-  "save": "Save",
-  "cancel": "Cancel",
-  "edit": "Edit",
-  "delete": "Delete",
-  "confirm": "Confirm",
-  "confirmDelete": "Are you sure you want to delete this item?",
-  "language": "Language",
-  "theme": "Theme",
-  "defaultCurrency": "Default Currency",
-  "autoUpdateRates": "Auto Update Exchange Rates",
-  "darkMode": "Dark Mode",
-  "customCurrency": "Custom Currency",
-  "currencyCode": "Currency Code",
-  "currencyName": "Currency Name",
-  "currencySymbol": "Currency Symbol",
-  "exchangeRate": "Exchange Rate (to USD)",
-  "manualRate": "Set Manual Rate",
-  "updateRates": "Update Exchange Rates",
-  "lastUpdated": "Last Updated",
-  "noAccounts": "No accounts found. Add your first account!",
-  "noTransactions": "No transactions found.",
-  "searchPlaceholder": "Search...",
-  "filterBy": "Filter By",
-  "sortBy": "Sort By",
-  "date": "Date",
-  "name": "Name",
-  "balance": "Balance",
-  "recent": "Recent",
-  "oldest": "Oldest",
-  "recentAccounts": "Recent Accounts",
-  "noDescription": "No description",
-  "net": "Net",
-  "exchangeRates": "Exchange Rates",
-  "dataManagement": "Data Management",
-  "resetAllData": "Reset All Data",
-  "updating": "Updating...",
-  "fetchingRates": "Fetching latest exchange rates",
-  "ratesUpdated": "Exchange rates updated successfully",
-  "updateFailed": "Failed to update exchange rates",
-  "resetConfirm": "This will permanently delete all accounts, transactions, and settings. This action cannot be undone.",
-  "allDataReset": "All data has been reset",
-  "resetFailed": "Failed to reset data",
-  "success": "Success",
-  "enterAccountName": "Enter account name",
-  "optionalDescription": "Optional description",
-  "createCustomCurrency": "Create a custom currency by providing the currency code, name, symbol, and exchange rate to USD.",
-  "currencyCodeHelper": "3 letter currency code",
-  "bitcoinExample": "e.g., Bitcoin, Ethereum",
-  "symbolExample": "e.g., ₿, Ξ, ₹",
-  "rateExample": "e.g., 45000.00",
-  "rateHelper": "How much 1 USD equals in your currency",
-  "exampleTitle": "Example:",
-  "exampleText": "Code: BTC\nName: Bitcoin\nSymbol: ₿\nRate: 0.000025 (if 1 USD = 0.000025 BTC)",
-  "languageChanged": "Language Changed",
-  "restartRequired": "Please restart the app to apply the layout changes for the new language.",
+  "dashboard": "Panel de Control",
+  "accounts": "Cuentas",
+  "transactions": "Transacciones",
+  "settings": "Configuración",
+  "welcome": "Bienvenido a LedgerWell",
+  "totalOwed": "Total que debo",
+  "totalOwedToMe": "Total que me deben",
+  "netBalance": "Saldo neto",
+  "addAccount": "Añadir cuenta",
+  "addTransaction": "Añadir transacción",
+  "accountName": "Nombre de la cuenta",
+  "description": "Descripción",
+  "currency": "Moneda",
+  "amount": "Cantidad",
+  "type": "Tipo",
+  "debt": "Debo dinero",
+  "credit": "Alguien me debe dinero",
+  "save": "Guardar",
+  "cancel": "Cancelar",
+  "edit": "Editar",
+  "delete": "Eliminar",
+  "confirm": "Confirmar",
+  "confirmDelete": "¿Estás seguro de que quieres eliminar este elemento?",
+  "language": "Idioma",
+  "theme": "Tema",
+  "defaultCurrency": "Moneda predeterminada",
+  "autoUpdateRates": "Actualizar tasas de cambio automáticamente",
+  "darkMode": "Modo oscuro",
+  "customCurrency": "Moneda personalizada",
+  "currencyCode": "Código de moneda",
+  "currencyName": "Nombre de la moneda",
+  "currencySymbol": "Símbolo de moneda",
+  "exchangeRate": "Tasa de cambio (a USD)",
+  "manualRate": "Establecer tasa manual",
+  "updateRates": "Actualizar tasas de cambio",
+  "lastUpdated": "Última actualización",
+  "noAccounts": "No se encontraron cuentas. ¡Añade tu primera cuenta!",
+  "noTransactions": "No se encontraron transacciones.",
+  "searchPlaceholder": "Buscar...",
+  "filterBy": "Filtrar por",
+  "sortBy": "Ordenar por",
+  "date": "Fecha",
+  "name": "Nombre",
+  "balance": "Saldo",
+  "recent": "Reciente",
+  "oldest": "Más antiguo",
+  "recentAccounts": "Cuentas Recientes",
+  "noDescription": "Sin descripción",
+  "net": "Neto",
+  "exchangeRates": "Tasas de cambio",
+  "dataManagement": "Gestión de datos",
+  "resetAllData": "Restablecer todos los datos",
+  "updating": "Actualizando...",
+  "fetchingRates": "Obteniendo las últimas tasas de cambio",
+  "ratesUpdated": "Tasas de cambio actualizadas exitosamente",
+  "updateFailed": "Error al actualizar las tasas de cambio",
+  "resetConfirm": "Esto eliminará permanentemente todas las cuentas, transacciones y configuraciones. Esta acción no se puede deshacer.",
+  "allDataReset": "Todos los datos han sido restablecidos",
+  "resetFailed": "Error al restablecer los datos",
+  "success": "Éxito",
+  "enterAccountName": "Ingrese el nombre de la cuenta",
+  "optionalDescription": "Descripción opcional",
+  "createCustomCurrency": "Cree una moneda personalizada proporcionando el código, nombre, símbolo y tasa de cambio a USD.",
+  "currencyCodeHelper": "Código de moneda de 3 letras",
+  "bitcoinExample": "Ejemplo: Bitcoin, Ethereum",
+  "symbolExample": "Ejemplo: ₿, Ξ, ₹",
+  "rateExample": "Ejemplo: 45000.00",
+  "rateHelper": "Cuánto equivale 1 USD en su moneda",
+  "exampleTitle": "Ejemplo:",
+  "exampleText": "Código: BTC\nNombre: Bitcoin\nSímbolo: ₿\nTasa: 0.000025 (si 1 USD = 0.000025 BTC)",
+  "languageChanged": "Idioma cambiado",
+  "restartRequired": "Por favor, reinicie la aplicación para aplicar los cambios de idioma.",
   "error": "Error",
-  "pleaseEnterAccountName": "Please enter an account name",
-  "pleaseSelectCurrency": "Please select a currency",
-  "accountUpdated": "Account updated successfully",
-  "accountCreated": "Account created successfully",
-  "accountActionFailed": "Failed to {action} account",
-  "update": "update",
-  "create": "create",
-  "pleaseSelectAccount": "Please select an account",
-  "pleaseEnterDescription": "Please enter a description",
-  "pleaseEnterPersonName": "Please enter a person or company name",
-  "pleaseEnterValidAmount": "Please enter a valid amount",
-  "transactionUpdated": "Transaction updated successfully",
-  "transactionAdded": "Transaction added successfully",
-  "transactionActionFailed": "Failed to {action} transaction",
+  "pleaseEnterAccountName": "Por favor, ingrese un nombre de cuenta",
+  "pleaseSelectCurrency": "Por favor, seleccione una moneda",
+  "accountUpdated": "Cuenta actualizada exitosamente",
+  "accountCreated": "Cuenta creada exitosamente",
+  "accountActionFailed": "Error al {action} la cuenta",
+  "update": "actualizar",
+  "create": "crear",
+  "pleaseSelectAccount": "Por favor, seleccione una cuenta",
+  "pleaseEnterDescription": "Por favor, ingrese una descripción",
+  "pleaseEnterPersonName": "Por favor, ingrese el nombre de una persona o empresa",
+  "pleaseEnterValidAmount": "Por favor, ingrese una cantidad válida",
+  "transactionUpdated": "Transacción actualizada exitosamente",
+  "transactionAdded": "Transacción agregada exitosamente",
+  "transactionActionFailed": "Error al {action} la transacción",
   "amountPlaceholder": "0.00",
-  "transactionDescriptionPlaceholder": "What is this transaction for?",
-  "fillAllFields": "Please fill in all fields",
-  "currencyCodeInvalid": "Currency code must be exactly 3 letters (e.g., USD, EUR)",
-  "validExchangeRate": "Please enter a valid exchange rate",
-  "about": "About",
-  "appDescription": "Personal debt and credit tracking app",
-  "version": "Version",
-  "developer": "Developer",
-  "sourceCode": "Source Code",
+  "transactionDescriptionPlaceholder": "¿Para qué es esta transacción?",
+  "fillAllFields": "Por favor, complete todos los campos",
+  "currencyCodeInvalid": "El código de moneda debe tener exactamente 3 letras (por ejemplo, USD, EUR)",
+  "validExchangeRate": "Por favor, ingrese una tasa de cambio válida",
+  "about": "Acerca de",
+  "appDescription": "Aplicación para el seguimiento de deudas y créditos personales",
+  "version": "Versión",
+  "developer": "Desarrollador",
+  "sourceCode": "Código fuente",
   "privacy": "Privacidad",
   "privacyDescription": "Tus datos permanecen en tu dispositivo",
   "footerDescription": "LedgerWell te ayuda a rastrear deudas y créditos con soporte multi-moneda y privacidad completa.",
   "copyrightText": "© 2025 Sepehr Mohammady. Código abierto bajo Licencia MIT.",
-  "currencyExists": "Currency {code} already exists",
-  "customCurrencyAdded": "Custom currency {code} added successfully",
-  "customCurrencyFailed": "Failed to add custom currency",
+  "currencyExists": "La moneda {code} ya existe",
+    "customCurrencyAdded": "Moneda personalizada {code} agregada exitosamente",
+  "customCurrencyUpdated": "Moneda personalizada {code} actualizada exitosamente",
+  "customCurrencyFailed": "Falló al agregar moneda personalizada",
+  "editCustomCurrency": "Editar Moneda Personalizada",
+  "editCustomCurrencyInfo": "Actualiza los detalles de tu moneda personalizada. La tasa de cambio debe ser relativa al USD.",
   "currencyCodePlaceholder": "e.g., BTC, ETH",
   "currencyNamePlaceholder": "e.g., Bitcoin, Ethereum",
-  "personName": "Person/Company Name",
-  "personNamePlaceholder": "Who owes or is owed money?",
-  "transactionDescription": "Additional Notes",
-  "transactionDescriptionOptional": "Optional additional details",
-  "manageCustomCurrencies": "Manage Custom Currencies",
-  "createCustomCurrencyButton": "Create Custom Currency",
-  "customCurrencyDeleted": "Custom currency deleted successfully",
-  "account": "Account",
-  "confirmReset": "Are you sure you want to reset all data?",
-  "customCurrencyExample": "For example: Bitcoin (BTC)",
-  "noAccountsFound": "No accounts found",
-  "noTransactionsFound": "No transactions found",
-  "reset": "Reset",
-  "settingsSaveFailed": "Failed to save settings",
-  "totalBalance": "Total Balance"
+  "personName": "Nombre de persona/empresa",
+  "personNamePlaceholder": "¿Quién debe o a quién se le debe dinero?",
+  "transactionDescription": "Notas adicionales",
+  "transactionDescriptionOptional": "Detalles adicionales opcionales",
+  "manageCustomCurrencies": "Gestionar monedas personalizadas",
+  "createCustomCurrencyButton": "Crear Moneda Personalizada",
+  "customCurrencyDeleted": "Moneda personalizada eliminada exitosamente",
+  "account": "Cuenta",
+  "confirmReset": "¿Estás seguro de que quieres restablecer todos los datos?",
+  "customCurrencyExample": "Por ejemplo: Bitcoin (BTC)",
+  "noAccountsFound": "No se encontraron cuentas",
+  "noTransactionsFound": "No se encontraron transacciones",
+  "reset": "Restablecer",
+  "settingsSaveFailed": "Error al guardar la configuración",
+  "totalBalance": "Saldo total"
 }
