--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -1,123 +1,126 @@
 {
-  "dashboard": "Dashboard",
-  "accounts": "Accounts",
-  "transactions": "Transactions",
-  "settings": "Settings",
-  "welcome": "Welcome to LedgerWell",
-  "totalOwed": "Total I Owe",
-  "totalOwedToMe": "Total Owed to Me",
-  "netBalance": "Net Balance",
-  "addAccount": "Add Account",
-  "addTransaction": "Add Transaction",
-  "accountName": "Account Name",
-  "description": "Description",
-  "currency": "Currency",
-  "amount": "Amount",
-  "type": "Type",
-  "debt": "I Owe Money",
-  "credit": "Someone Owes Me",
-  "save": "Save",
-  "cancel": "Cancel",
-  "edit": "Edit",
-  "delete": "Delete",
-  "confirm": "Confirm",
-  "confirmDelete": "Are you sure you want to delete this item?",
-  "language": "Language",
-  "theme": "Theme",
-  "defaultCurrency": "Default Currency",
-  "autoUpdateRates": "Auto Update Exchange Rates",
-  "darkMode": "Dark Mode",
-  "customCurrency": "Custom Currency",
-  "currencyCode": "Currency Code",
-  "currencyName": "Currency Name",
-  "currencySymbol": "Currency Symbol",
-  "exchangeRate": "Exchange Rate (to USD)",
-  "manualRate": "Set Manual Rate",
-  "updateRates": "Update Exchange Rates",
-  "lastUpdated": "Last Updated",
-  "noAccounts": "No accounts found. Add your first account!",
-  "noTransactions": "No transactions found.",
-  "searchPlaceholder": "Search...",
-  "filterBy": "Filter By",
-  "sortBy": "Sort By",
-  "date": "Date",
-  "name": "Name",
-  "balance": "Balance",
-  "recent": "Recent",
-  "oldest": "Oldest",
-  "recentAccounts": "Recent Accounts",
-  "noDescription": "No description",
-  "net": "Net",
-  "exchangeRates": "Exchange Rates",
-  "dataManagement": "Data Management",
-  "resetAllData": "Reset All Data",
-  "updating": "Updating...",
-  "fetchingRates": "Fetching latest exchange rates",
-  "ratesUpdated": "Exchange rates updated successfully",
-  "updateFailed": "Failed to update exchange rates",
-  "resetConfirm": "This will permanently delete all accounts, transactions, and settings. This action cannot be undone.",
-  "allDataReset": "All data has been reset",
-  "resetFailed": "Failed to reset data",
-  "success": "Success",
-  "enterAccountName": "Enter account name",
-  "optionalDescription": "Optional description",
-  "createCustomCurrency": "Create a custom currency by providing the currency code, name, symbol, and exchange rate to USD.",
-  "currencyCodeHelper": "3 letter currency code",
-  "bitcoinExample": "e.g., Bitcoin, Ethereum",
-  "symbolExample": "e.g., ₿, Ξ, ₹",
-  "rateExample": "e.g., 45000.00",
-  "rateHelper": "How much 1 USD equals in your currency",
-  "exampleTitle": "Example:",
-  "exampleText": "Code: BTC\nName: Bitcoin\nSymbol: ₿\nRate: 0.000025 (if 1 USD = 0.000025 BTC)",
-  "languageChanged": "Language Changed",
-  "restartRequired": "Please restart the app to apply the layout changes for the new language.",
-  "error": "Error",
-  "pleaseEnterAccountName": "Please enter an account name",
-  "pleaseSelectCurrency": "Please select a currency",
-  "accountUpdated": "Account updated successfully",
-  "accountCreated": "Account created successfully",
-  "accountActionFailed": "Failed to {action} account",
-  "update": "update",
-  "create": "create",
-  "pleaseSelectAccount": "Please select an account",
-  "pleaseEnterDescription": "Please enter a description",
-  "pleaseEnterPersonName": "Please enter a person or company name",
-  "pleaseEnterValidAmount": "Please enter a valid amount",
-  "transactionUpdated": "Transaction updated successfully",
-  "transactionAdded": "Transaction added successfully",
-  "transactionActionFailed": "Failed to {action} transaction",
+  "dashboard": "ダッシュボード",
+  "accounts": "アカウント",
+  "transactions": "取引",
+  "settings": "設定",
+  "welcome": "LedgerWellへようこそ",
+  "totalOwed": "私が借りている合計",
+  "totalOwedToMe": "私に借りている合計",
+  "netBalance": "純残高",
+  "addAccount": "アカウントを追加",
+  "addTransaction": "取引を追加",
+  "accountName": "アカウント名",
+  "description": "説明",
+  "currency": "通貨",
+  "amount": "金額",
+  "type": "タイプ",
+  "debt": "私が借りている",
+  "credit": "誰かが私に借りている",
+  "save": "保存",
+  "cancel": "キャンセル",
+  "edit": "編集",
+  "delete": "削除",
+  "confirm": "確認",
+  "confirmDelete": "この項目を削除してもよろしいですか？",
+  "language": "言語",
+  "theme": "テーマ",
+  "defaultCurrency": "デフォルト通貨",
+  "autoUpdateRates": "為替レートを自動更新",
+  "darkMode": "ダークモード",
+  "customCurrency": "カスタム通貨",
+  "currencyCode": "通貨コード",
+  "currencyName": "通貨名",
+  "currencySymbol": "通貨記号",
+  "exchangeRate": "為替レート（USDへの）",
+  "manualRate": "手動レート設定",
+  "updateRates": "為替レートを更新",
+  "lastUpdated": "最終更新",
+  "noAccounts": "アカウントが見つかりません。最初のアカウントを追加してください！",
+  "noTransactions": "取引が見つかりません。",
+  "searchPlaceholder": "検索...",
+  "filterBy": "フィルター",
+  "sortBy": "並び替え",
+  "date": "日付",
+  "name": "名前",
+  "balance": "残高",
+  "recent": "最近",
+  "oldest": "最も古い",
+  "recentAccounts": "最近のアカウント",
+  "noDescription": "説明なし",
+  "net": "純額",
+  "exchangeRates": "為替レート",
+  "dataManagement": "データ管理",
+  "resetAllData": "すべてのデータをリセット",
+  "updating": "更新中...",
+  "fetchingRates": "最新の為替レートを取得中",
+  "ratesUpdated": "為替レートが正常に更新されました",
+  "updateFailed": "為替レートの更新に失敗しました",
+  "resetConfirm": "これにより、すべてのアカウント、取引、設定が完全に削除されます。この操作は元に戻せません。",
+  "allDataReset": "すべてのデータがリセットされました",
+  "resetFailed": "データのリセットに失敗しました",
+  "success": "成功",
+  "enterAccountName": "アカウント名を入力してください",
+  "optionalDescription": "任意の説明",
+  "createCustomCurrency": "通貨コード、名前、記号、USDへの為替レートを入力してカスタム通貨を作成します。",
+  "currencyCodeHelper": "3文字の通貨コード",
+  "bitcoinExample": "例: ビットコイン、イーサリアム",
+  "symbolExample": "例: ₿、Ξ、₹",
+  "rateExample": "例: 45000.00",
+  "rateHelper": "1 USDがあなたの通貨でいくらか",
+  "exampleTitle": "例:",
+  "exampleText": "コード: BTC\n名前: ビットコイン\n記号: ₿\nレート: 0.000025 (1 USD = 0.000025 BTCの場合)",
+  "languageChanged": "言語が変更されました",
+  "restartRequired": "新しい言語のレイアウト変更を適用するにはアプリを再起動してください。",
+  "error": "エラー",
+  "pleaseEnterAccountName": "アカウント名を入力してください",
+  "pleaseSelectCurrency": "通貨を選択してください",
+  "accountUpdated": "アカウントが正常に更新されました",
+  "accountCreated": "アカウントが正常に作成されました",
+  "accountActionFailed": "{action}アカウントに失敗しました",
+  "update": "更新",
+  "create": "作成",
+  "pleaseSelectAccount": "アカウントを選択してください",
+  "pleaseEnterDescription": "説明を入力してください",
+  "pleaseEnterPersonName": "人または会社名を入力してください",
+  "pleaseEnterValidAmount": "有効な金額を入力してください",
+  "transactionUpdated": "取引が正常に更新されました",
+  "transactionAdded": "取引が正常に追加されました",
+  "transactionActionFailed": "{action}取引に失敗しました",
   "amountPlaceholder": "0.00",
-  "transactionDescriptionPlaceholder": "What is this transaction for?",
-  "fillAllFields": "Please fill in all fields",
-  "currencyCodeInvalid": "Currency code must be exactly 3 letters (e.g., USD, EUR)",
-  "validExchangeRate": "Please enter a valid exchange rate",
-  "about": "About",
-  "appDescription": "Personal debt and credit tracking app",
-  "version": "Version",
-  "developer": "Developer",
-  "sourceCode": "Source Code",
+  "transactionDescriptionPlaceholder": "この取引の目的は何ですか？",
+  "fillAllFields": "すべての項目を入力してください",
+  "currencyCodeInvalid": "通貨コードは正確に3文字である必要があります（例: USD、EUR）",
+  "validExchangeRate": "有効な為替レートを入力してください",
+  "about": "アプリについて",
+  "appDescription": "個人の借金とクレジットを追跡するアプリ",
+  "version": "バージョン",
+  "developer": "開発者",
+  "sourceCode": "ソースコード",
   "privacy": "プライバシー",
   "privacyDescription": "あなたのデータはあなたのデバイスにとどまります",
   "footerDescription": "LedgerWellは、マルチ通貨サポートと完全なプライバシーで借金とクレジットを追跡するのに役立ちます。",
   "copyrightText": "© 2025 Sepehr Mohammady. MITライセンスの下でオープンソース。",
-  "currencyExists": "Currency {code} already exists",
-  "customCurrencyAdded": "Custom currency {code} added successfully",
-  "customCurrencyFailed": "Failed to add custom currency",
+  "currencyExists": "通貨 {code} は既に存在します",
+  "customCurrencyAdded": "カスタム通貨 {code} が正常に追加されました",
+  "customCurrencyUpdated": "カスタム通貨 {code} が正常に更新されました",
+  "customCurrencyFailed": "カスタム通貨の追加に失敗しました",
+  "editCustomCurrency": "カスタム通貨を編集",
+  "editCustomCurrencyInfo": "カスタム通貨の詳細を更新してください。為替レートはUSDに対する相対値である必要があります。",
   "currencyCodePlaceholder": "e.g., BTC, ETH",
   "currencyNamePlaceholder": "e.g., Bitcoin, Ethereum",
-  "personName": "Person/Company Name",
-  "personNamePlaceholder": "Who owes or is owed money?",
-  "transactionDescription": "Additional Notes",
-  "transactionDescriptionOptional": "Optional additional details",
-  "manageCustomCurrencies": "Manage Custom Currencies",
-  "createCustomCurrencyButton": "Create Custom Currency",
-  "customCurrencyDeleted": "Custom currency deleted successfully",
-  "account": "Account",
-  "confirmReset": "Are you sure you want to reset all data?",
-  "customCurrencyExample": "For example: Bitcoin (BTC)",
-  "noAccountsFound": "No accounts found",
-  "noTransactionsFound": "No transactions found",
-  "reset": "Reset",
-  "settingsSaveFailed": "Failed to save settings",
-  "totalBalance": "Total Balance"
+  "personName": "人/会社名",
+  "personNamePlaceholder": "誰が借りている、または借りられているか？",
+  "transactionDescription": "追加メモ",
+  "transactionDescriptionOptional": "追加の詳細（任意）",
+  "manageCustomCurrencies": "カスタム通貨を管理",
+  "createCustomCurrencyButton": "カスタム通貨を作成",
+  "customCurrencyDeleted": "カスタム通貨が正常に削除されました",
+  "account": "アカウント",
+  "confirmReset": "すべてのデータをリセットしてもよろしいですか？",
+  "customCurrencyExample": "例: ビットコイン (BTC)",
+  "noAccountsFound": "アカウントが見つかりません",
+  "noTransactionsFound": "取引が見つかりません",
+  "reset": "リセット",
+  "settingsSaveFailed": "設定の保存に失敗しました",
+  "totalBalance": "総残高"
 }
