--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,123 +1,126 @@
 {
-  "dashboard": "Dashboard",
-  "accounts": "Accounts",
-  "transactions": "Transactions",
-  "settings": "Settings",
-  "welcome": "Welcome to LedgerWell",
-  "totalOwed": "Total I Owe",
-  "totalOwedToMe": "Total Owed to Me",
-  "netBalance": "Net Balance",
-  "addAccount": "Add Account",
-  "addTransaction": "Add Transaction",
-  "accountName": "Account Name",
-  "description": "Description",
-  "currency": "Currency",
-  "amount": "Amount",
-  "type": "Type",
-  "debt": "I Owe Money",
-  "credit": "Someone Owes Me",
-  "save": "Save",
-  "cancel": "Cancel",
-  "edit": "Edit",
-  "delete": "Delete",
-  "confirm": "Confirm",
-  "confirmDelete": "Are you sure you want to delete this item?",
-  "language": "Language",
-  "theme": "Theme",
-  "defaultCurrency": "Default Currency",
-  "autoUpdateRates": "Auto Update Exchange Rates",
-  "darkMode": "Dark Mode",
-  "customCurrency": "Custom Currency",
-  "currencyCode": "Currency Code",
-  "currencyName": "Currency Name",
-  "currencySymbol": "Currency Symbol",
-  "exchangeRate": "Exchange Rate (to USD)",
-  "manualRate": "Set Manual Rate",
-  "updateRates": "Update Exchange Rates",
-  "lastUpdated": "Last Updated",
-  "noAccounts": "No accounts found. Add your first account!",
-  "noTransactions": "No transactions found.",
-  "searchPlaceholder": "Search...",
-  "filterBy": "Filter By",
-  "sortBy": "Sort By",
-  "date": "Date",
-  "name": "Name",
-  "balance": "Balance",
-  "recent": "Recent",
-  "oldest": "Oldest",
-  "recentAccounts": "Recent Accounts",
-  "noDescription": "No description",
-  "net": "Net",
-  "exchangeRates": "Exchange Rates",
-  "dataManagement": "Data Management",
-  "resetAllData": "Reset All Data",
-  "updating": "Updating...",
-  "fetchingRates": "Fetching latest exchange rates",
-  "ratesUpdated": "Exchange rates updated successfully",
-  "updateFailed": "Failed to update exchange rates",
-  "resetConfirm": "This will permanently delete all accounts, transactions, and settings. This action cannot be undone.",
-  "allDataReset": "All data has been reset",
-  "resetFailed": "Failed to reset data",
-  "success": "Success",
-  "enterAccountName": "Enter account name",
-  "optionalDescription": "Optional description",
-  "createCustomCurrency": "Create a custom currency by providing the currency code, name, symbol, and exchange rate to USD.",
-  "currencyCodeHelper": "3 letter currency code",
-  "bitcoinExample": "e.g., Bitcoin, Ethereum",
-  "symbolExample": "e.g., ₿, Ξ, ₹",
-  "rateExample": "e.g., 45000.00",
-  "rateHelper": "How much 1 USD equals in your currency",
-  "exampleTitle": "Example:",
-  "exampleText": "Code: BTC\nName: Bitcoin\nSymbol: ₿\nRate: 0.000025 (if 1 USD = 0.000025 BTC)",
-  "languageChanged": "Language Changed",
-  "restartRequired": "Please restart the app to apply the layout changes for the new language.",
-  "error": "Error",
-  "pleaseEnterAccountName": "Please enter an account name",
-  "pleaseSelectCurrency": "Please select a currency",
-  "accountUpdated": "Account updated successfully",
-  "accountCreated": "Account created successfully",
-  "accountActionFailed": "Failed to {action} account",
-  "update": "update",
-  "create": "create",
-  "pleaseSelectAccount": "Please select an account",
-  "pleaseEnterDescription": "Please enter a description",
-  "pleaseEnterPersonName": "Please enter a person or company name",
-  "pleaseEnterValidAmount": "Please enter a valid amount",
-  "transactionUpdated": "Transaction updated successfully",
-  "transactionAdded": "Transaction added successfully",
-  "transactionActionFailed": "Failed to {action} transaction",
+  "dashboard": "Панель управления",
+  "accounts": "Счета",
+  "transactions": "Транзакции",
+  "settings": "Настройки",
+  "welcome": "Добро пожаловать в LedgerWell",
+  "totalOwed": "Всего я должен",
+  "totalOwedToMe": "Всего должны мне",
+  "netBalance": "Чистый баланс",
+  "addAccount": "Добавить счет",
+  "addTransaction": "Добавить транзакцию",
+  "accountName": "Название счета",
+  "description": "Описание",
+  "currency": "Валюта",
+  "amount": "Сумма",
+  "type": "Тип",
+  "debt": "Я должен деньги",
+  "credit": "Кто-то должен мне деньги",
+  "save": "Сохранить",
+  "cancel": "Отмена",
+  "edit": "Редактировать",
+  "delete": "Удалить",
+  "confirm": "Подтвердить",
+  "confirmDelete": "Вы уверены, что хотите удалить этот элемент?",
+  "language": "Язык",
+  "theme": "Тема",
+  "defaultCurrency": "Валюта по умолчанию",
+  "autoUpdateRates": "Автоматически обновлять курсы валют",
+  "darkMode": "Темный режим",
+  "customCurrency": "Пользовательская валюта",
+  "currencyCode": "Код валюты",
+  "currencyName": "Название валюты",
+  "currencySymbol": "Символ валюты",
+  "exchangeRate": "Курс обмена (к USD)",
+  "manualRate": "Установить ручной курс",
+  "updateRates": "Обновить курсы валют",
+  "lastUpdated": "Последнее обновление",
+  "noAccounts": "Счета не найдены. Добавьте свой первый счет!",
+  "noTransactions": "Транзакции не найдены.",
+  "searchPlaceholder": "Поиск...",
+  "filterBy": "Фильтровать по",
+  "sortBy": "Сортировать по",
+  "date": "Дата",
+  "name": "Имя",
+  "balance": "Баланс",
+  "recent": "Недавние",
+  "oldest": "Самые старые",
+  "recentAccounts": "Недавние счета",
+  "noDescription": "Нет описания",
+  "net": "Чистый",
+  "exchangeRates": "Курсы валют",
+  "dataManagement": "Управление данными",
+  "resetAllData": "Сбросить все данные",
+  "updating": "Обновление...",
+  "fetchingRates": "Получение последних курсов валют",
+  "ratesUpdated": "Курсы валют успешно обновлены",
+  "updateFailed": "Не удалось обновить курсы валют",
+  "resetConfirm": "Это навсегда удалит все счета, транзакции и настройки. Это действие нельзя отменить.",
+  "allDataReset": "Все данные были сброшены",
+  "resetFailed": "Не удалось сбросить данные",
+  "success": "Успех",
+  "enterAccountName": "Введите название счета",
+  "optionalDescription": "Дополнительное описание",
+  "createCustomCurrency": "Создайте пользовательскую валюту, указав код, название, символ и курс обмена к USD.",
+  "currencyCodeHelper": "3-буквенный код валюты",
+  "bitcoinExample": "Например: Биткоин, Эфириум",
+  "symbolExample": "Например: ₿, Ξ, ₹",
+  "rateExample": "Например: 45000.00",
+  "rateHelper": "Сколько стоит 1 USD в вашей валюте",
+  "exampleTitle": "Пример:",
+  "exampleText": "Код: BTC\nНазвание: Биткоин\nСимвол: ₿\nКурс: 0.000025 (если 1 USD = 0.000025 BTC)",
+  "languageChanged": "Язык изменен",
+  "restartRequired": "Пожалуйста, перезапустите приложение, чтобы применить изменения языка.",
+  "error": "Ошибка",
+  "pleaseEnterAccountName": "Пожалуйста, введите название счета",
+  "pleaseSelectCurrency": "Пожалуйста, выберите валюту",
+  "accountUpdated": "Счет успешно обновлен",
+  "accountCreated": "Счет успешно создан",
+  "accountActionFailed": "Не удалось {action} счет",
+  "update": "обновить",
+  "create": "создать",
+  "pleaseSelectAccount": "Пожалуйста, выберите счет",
+  "pleaseEnterDescription": "Пожалуйста, введите описание",
+  "pleaseEnterPersonName": "Пожалуйста, введите имя человека или компании",
+  "pleaseEnterValidAmount": "Пожалуйста, введите действительную сумму",
+  "transactionUpdated": "Транзакция успешно обновлена",
+  "transactionAdded": "Транзакция успешно добавлена",
+  "transactionActionFailed": "Не удалось {action} транзакцию",
   "amountPlaceholder": "0.00",
-  "transactionDescriptionPlaceholder": "What is this transaction for?",
-  "fillAllFields": "Please fill in all fields",
-  "currencyCodeInvalid": "Currency code must be exactly 3 letters (e.g., USD, EUR)",
-  "validExchangeRate": "Please enter a valid exchange rate",
-  "about": "About",
-  "appDescription": "Personal debt and credit tracking app",
-  "version": "Version",
-  "developer": "Developer",
-  "sourceCode": "Source Code",
+  "transactionDescriptionPlaceholder": "Для чего эта транзакция?",
+  "fillAllFields": "Пожалуйста, заполните все поля",
+  "currencyCodeInvalid": "Код валюты должен состоять ровно из 3 букв (например, USD, EUR)",
+  "validExchangeRate": "Пожалуйста, введите действительный курс обмена",
+  "about": "О приложении",
+  "appDescription": "Приложение для отслеживания личных долгов и кредитов",
+  "version": "Версия",
+  "developer": "Разработчик",
+  "sourceCode": "Исходный код",
   "privacy": "Конфиденциальность",
   "privacyDescription": "Ваши данные остаются на вашем устройстве",
   "footerDescription": "LedgerWell помогает вам отслеживать долги и кредиты с поддержкой многовалютности и полной конфиденциальностью.",
   "copyrightText": "© 2025 Sepehr Mohammady. Открытый исходный код под лицензией MIT.",
-  "currencyExists": "Currency {code} already exists",
-  "customCurrencyAdded": "Custom currency {code} added successfully",
-  "customCurrencyFailed": "Failed to add custom currency",
+  "currencyExists": "Валюта {code} уже существует",
+  "customCurrencyAdded": "Пользовательская валюта {code} успешно добавлена",
+  "customCurrencyUpdated": "Пользовательская валюта {code} успешно обновлена",
+  "customCurrencyFailed": "Не удалось добавить пользовательскую валюту",
+  "editCustomCurrency": "Редактировать Пользовательскую Валюту",
+  "editCustomCurrencyInfo": "Обновите детали вашей пользовательской валюты. Обменный курс должен быть относительно USD.",
   "currencyCodePlaceholder": "e.g., BTC, ETH",
   "currencyNamePlaceholder": "e.g., Bitcoin, Ethereum",
-  "personName": "Person/Company Name",
-  "personNamePlaceholder": "Who owes or is owed money?",
-  "transactionDescription": "Additional Notes",
-  "transactionDescriptionOptional": "Optional additional details",
-  "manageCustomCurrencies": "Manage Custom Currencies",
-  "createCustomCurrencyButton": "Create Custom Currency",
-  "customCurrencyDeleted": "Custom currency deleted successfully",
-  "account": "Account",
-  "confirmReset": "Are you sure you want to reset all data?",
-  "customCurrencyExample": "For example: Bitcoin (BTC)",
-  "noAccountsFound": "No accounts found",
-  "noTransactionsFound": "No transactions found",
-  "reset": "Reset",
-  "settingsSaveFailed": "Failed to save settings",
-  "totalBalance": "Total Balance"
+  "personName": "Имя человека/компании",
+  "personNamePlaceholder": "Кто должен или кому должны деньги?",
+  "transactionDescription": "Дополнительные заметки",
+  "transactionDescriptionOptional": "Дополнительные детали (необязательно)",
+  "manageCustomCurrencies": "Управлять пользовательскими валютами",
+  "createCustomCurrencyButton": "Создать Пользовательскую Валюту",
+  "customCurrencyDeleted": "Пользовательская валюта успешно удалена",
+  "account": "Счет",
+  "confirmReset": "Вы уверены, что хотите сбросить все данные?",
+  "customCurrencyExample": "Например: Биткоин (BTC)",
+  "noAccountsFound": "Счета не найдены",
+  "noTransactionsFound": "Транзакции не найдены",
+  "reset": "Сбросить",
+  "settingsSaveFailed": "Не удалось сохранить настройки",
+  "totalBalance": "Общий баланс"
 }
